--- a/games/Pawapro/2024/栄冠ナインの試合.md
+++ b/games/Pawapro/2024/栄冠ナインの試合.md
@@ -90,7 +90,7 @@
 
 対応する青特があるのに7になってないのは怪しい。
 
-### 試合に勝つための戦術（投手）
+### 試合に勝つための戦術（守備）
 
 投手の戦術は外角と低めが強くて、ホームランになりにくい。
 あとはストライクにするかボールにするか、直球か変化球か、の違いでしかない。カウントが良かったらくさいところでボール球を振らせるのも強い。
@@ -117,7 +117,13 @@
 
 打たせて取れと緩急重視は他の戦術よりも長打になりやすい。
 
-### 試合に勝つための戦術（野手）
+内野の守備力が低いなら、ゲッツーシフトは無理に使わない。
+あと打た取れも守備が悪いと7でも抜かれる。
+
+カードの数字はあまり守備を考慮してないように思える。
+投手が狙い通りに投げても、守備が悪いと抜かれる。
+
+### 試合に勝つための戦術（攻撃）
 
 - 魔物を使ったらミート多用、積極、転がせ
 - ミートと走力が高かったら転がせ
