--- a/shared/care/配慮.md
+++ b/shared/care/配慮.md
@@ -176,3 +176,5 @@ Careは単に失われないようにするだけで、Entertainmentだけでは
 先回りして対処するだけが配慮ではない。時には任せるのも配慮。
 
 気配りの基礎は周りに関心を持つことや観察すること。
+
+口や手を出すタイミングが気遣いでは重要。まずリズムを合わせる。
