--- a/shared/development/卓越性.md
+++ b/shared/development/卓越性.md
@@ -32,3 +32,5 @@
 人が練習していないときに練習すれば追いつきやすい。ただ、量よりも質がまず重要。
 
 他人の評価は「うまい」と言われることよりも「すごい」と言われることを目指す。
+
+一流は「圧倒的」であるべし。勝率6割くらいの「良い」選手では足りない。同じクラスの中でも8割、なんなら9割勝つ。
