--- a/shared/music/vocal/training/ボーカルトレーニング.md
+++ b/shared/music/vocal/training/ボーカルトレーニング.md
@@ -166,3 +166,5 @@ https://youtu.be/L1SH1cRTOuM?si=bL92URDh81zOJCyM
 曲を覚えるだけなら大きな声でなくてもいい。基本はハミングが楽。抑えて歌ってしまうと変な癖がつきやすい。
 
 歌い方が良くなっても、鍛え方が足りないと不安定になりやすい。
+
+声楽の曲の部分 (music/vocal) と、歌の部分 (singing) を分けてもいいかも。
