--- a/shared/war/tips/恐怖を与える.md
+++ b/shared/war/tips/恐怖を与える.md
@@ -11,3 +11,7 @@
 あまりにも考えなしだとリスクが高いばかりで実ることは少ないけど、うまく噛み合うと大きな勝ちを得られることもある。
 
 どれだけ策を尽くしても、最後には正々堂々と勝たなければ相手に恐怖を与えられない。まぁ、闇に隠れて圧倒するのも正々堂々ではある。正々堂々というのは力を示すということ。
+
+わからないことは恐ろしい。
+恐怖を与えるためには、相手に理解できないことをする。意味や利益のない行動、リスクの高い行動は理解の埒外になりやすい。
+あとは単純に痛みを与えるのもいいが、恨みを買うほど体を損壊するべきではない。
