--- a/shared/voice/training/ボイストレーニング.md
+++ b/shared/voice/training/ボイストレーニング.md
@@ -69,3 +69,5 @@ A4とかの国際表記で説明してない講師はちょっと怪しい。hiA
 1日に長時間声を出していると喉を壊しやすいので、毎日短時間ずつでも練習するのが大事。しっかり声を出すのは1-2時間に抑えたほうがいい。
 
 大きな声を出せるカラオケやスタジオで練習する日はそこで集中して練習する。
+
+声はまず良い音を目指すけど、最終的には言葉にしないといけない。音として良く、さらに言葉として伝わらないといけない。
