--- a/shared/commerce/marketing/マーケティング.md
+++ b/shared/commerce/marketing/マーケティング.md
@@ -145,3 +145,5 @@ https://drive.google.com/file/d/1YaG9xpu-WQKBPUi8yQ4HaDYQLUSa7Y3J/view
 
 マーケティングは、ビジネスの相手、市場や顧客を見つける、作るのが狙い。まぁ、それはコマース全体でもある。
 「自ずから売れる」ようにするのがマーケティング。
+
+「自ずから売れる」のがマーケティングだけど、通常はその初期段階として広告などで販売ルートを作るのも含める。
