--- a/shared/production/product/development/製品開発.md
+++ b/shared/production/product/development/製品開発.md
@@ -120,3 +120,30 @@ https://youtube.com/watch?v=HWB1j6enly8&si=vFYpXZ751PbPe60t
 良い製品とは、売れる、使われる製品のことだ。
 
 売れる製品には、「愛される（好感度）」面と「使われる（ステータス）」面がある。
+
+製品開発に必要な能力:
+
+- 企画段階:
+  - アイデア出し
+  - 調整
+    - 内部
+    - 外部
+  - 商業
+    - マーケティング
+    - 販売ルート
+    - 広告
+  - 倫理
+    - プライバシーやセキュリティ
+    - 環境
+  - 財務
+    - 収益性
+    - 低リスク
+    - 低コスト
+- 研究段階:
+  - 試作方法
+  - 試験方法
+- 販売段階:
+  - 量産方法
+    - オフショア
+    - 機械化
+    - 効率化
