--- a/shared/production/product/management/製品マネジメント.md
+++ b/shared/production/product/management/製品マネジメント.md
@@ -37,3 +37,9 @@ PdM は当然異常系も考えられる人であるべき。
 知識や技術がないと品質を保てない。
 
 https://blog.tsubotax.com/n/n2f23c96cde50
+
+- 製品を届ける
+- 製品の価値を高める
+- 製品の価値を回収する
+- 製品を内部評価する
+- 製品の外部評価を集める
