--- a/shared/production/product/製造.md
+++ b/shared/production/product/製造.md
@@ -2,3 +2,10 @@
 
 ソフトウェア開発のように、設計と製造が直結している分野もある。
 製造というと、部品を組み立てる部分が特に重要。
+
+製品の製造は、作って動かしてみる段階。製造して、使ってみないとわからないことがある。
+設計・開発段階から、研究室の中で試作して動かすこともよくある。
+
+試作としての製造と、量産としての製造は分けて考えるべき。
+
+端に「製造」と言った場合、量産の意味を含む場合がある。
