--- a/shared/production/生産.md
+++ b/shared/production/生産.md
@@ -1,5 +1,7 @@
 # Production
 
+制作。
+
 価値を生み出すこと。
 
 製品を作ること。
@@ -34,3 +36,9 @@
 せいぜいCDを焼くくらいで簡単に量産できる。
 
 組織を構築するのも生産。
+
+何かを作る、ということ。
+
+生殖は Reproduction という。
+
+期限やコストはまた別。
