--- a/shared/job/hiring/労働.md
+++ b/shared/job/hiring/労働.md
@@ -40,3 +40,6 @@
 
 生活のために仕方なく行うのが労働。
 会社に雇われていても生活に余裕があったら必要なだけ働いても別にいい。なんなら辞めたっていい。
+
+残業や休日出勤はしないのが基本。
+何なら8時間労働でも長いくらい。半分くらいは休むくらいで働くのがちょうどいい。代わりに、働いている時間は最高効率で働く。それで足りないなら上司が失敗している。
