--- a/shared/collaboration/organization/静かな退職.md
+++ b/shared/collaboration/organization/静かな退職.md
@@ -1,3 +1,5 @@
+退職はしないが、会社のために必要以上に働かないこと。もちろん残業や休日出勤はしないし、積極的に仕事を探すこともしない。
+
 https://news.mynavi.jp/article/20240826-3010567/
 
 静かな退職の問題と管理職になりたくない問題は繋がっている。
