--- a/games/Pawapro/2024/栄冠ナインの選手育成.md
+++ b/games/Pawapro/2024/栄冠ナインの選手育成.md
@@ -43,6 +43,8 @@
 
 栄冠ナインでは強いカードの数字が上がる、キレ、低めも強い。
 
+対エースを回避するためにあえて球速を144キロ以下に抑える手もあるけど、栄冠だと世界大会で勝手に上がってしまうので調整が難しい。
+
 ## 野手共通
 
 - 打撃能力はまずDFCかDDEを目指す
@@ -228,15 +230,17 @@ DかCくらいで牽制できればまずは十分なので、一旦打撃能力
 
 目標:
 
-1. F-F-D-E-F-F: 160
-2. D-E-C-E-E-F; 250: 中堅
+1. F-F-C-F-F-F; 150
+2. D-D-C-E-F-F; 240: 中堅
 3. C-D-B-D-E-E; 300: 強豪
-4. B-C-S-C-D-E: 370: 名門
+4. B-C-S-C-D-E; 370: 名門
 
 まずはボールに追いつかないとどうしようもない。
 ただ、追いつけるようになったら捕球Eにはしたい。
 
 外野の肩は右、中、左の順で強い方がいい。特に右は2塁から3塁へのタッチアップを咎めることがある。ただ、実際に咎めるにはかなり肩力が必要。
+
+外野の守備はとにかく走力を上げて、CかBになってからそれ以外を上げるくらいでいい。まぁ、Gは先に消したいけど。あとは捕球、肩力、守備力の順。打撃優先でいい。
 
 ## ポジションの互換性
 
