--- a/shared/action/祈り.md
+++ b/shared/action/祈り.md
@@ -34,3 +34,5 @@ https://x.com/kansetsu_pokiri/status/1916066661444256112?s=12
 
 「何もしない」あるいは「祈る」のも立派な対案である。ただし、パフォーマンスは十分に考慮されなければならない。
 何もしないのが最善になるのは、それ以外の行動全てで状況が悪化する場合のみ。それ以外の行動全てを評価してからでないと判断できない。
+
+手を出すと悪化するか、無駄にコストがかかるだけの状況なら、祈るのが最善。逆に、少しでもコストを超えたパフォーマンスがあるなら手を出すべき。
