--- a/shared/breath/呼吸の方法.md
+++ b/shared/breath/呼吸の方法.md
@@ -1,9 +1,15 @@
-腹式呼吸と胸式呼吸がある。
+- 腹式呼吸: 横隔膜を下げて吸う
+- 胸式呼吸: 肋間筋を押し込んで吐く
+- 丹田呼吸: 横隔膜を下げたまま腹筋を押し上げて吐く
 
-## 腹式呼吸と胸式呼吸の違い
+## 呼吸の違い
 
 胸式呼吸と腹式呼吸では使っている筋肉が違う。
 胸式呼吸は肋間筋、腹式呼吸は横隔膜を使う。
+
+息を吐く時に力は抜けていて、息を吐くほど息は弱くなっていくのが腹式呼吸。
+息を吐く時に力が入っていて、息を吐き切って力を抜くと一気に息が入ってくるのが胸式呼吸。
+息を吐く時に力が入っていて、息を吐き切って力を抜くと一気に息が出ていくのが丹田呼吸。ただ、横隔膜を下げたまま息を吸うときは腹筋だけ力を抜くと息が入ってくる。
 
 ## その他
 
