--- a/shared/cooking/tips/トマト缶を使う.md
+++ b/shared/cooking/tips/トマト缶を使う.md
@@ -7,3 +7,6 @@
   - アラビアータ
 
 ミートソースはトマト缶よりレトルトのミートソースを直接買ったほうが楽。
+
+トマトペーストのチューブ1つでだいたいトマトジュース200ml分くらい。
+1つ50円しないくらいなので、トマト缶より安いし使い勝手もいい。トマトの身が欲しい時だけトマト缶にする。カレーとかミネストローネとかはトマトペーストで十分。
