--- a/shared/training/努力.md
+++ b/shared/training/努力.md
@@ -65,3 +65,8 @@ https://www.youtube.com/watch?v=rTFLOSI5ZNI
 間違った努力はやればやるほど悪くなる。
 
 努力の方向性が合っているかどうかを常に確認し続けないといけない。
+
+犠牲とも思わずに全てを捧げる人には勝てない。
+自分が全てを捧げられることを探すか、ほどほどを目指すと良い。
+
+努力には無理がある。
