--- a/shared/training/練習.md
+++ b/shared/training/練習.md
@@ -352,3 +352,5 @@ https://m.twitch.tv/videos/1991942489?desktop-redirect=true
 - どんな練習に効果があったか
 
 技術に気を払っているうちは表現に集中できない。
+
+習うより慣れろ。しかし、自らの学びは止めない。外から得られる知識よりも内なる思考を回す。
