--- a/shared/family/marriage/結婚.md
+++ b/shared/family/marriage/結婚.md
@@ -111,3 +111,17 @@
 ただ、理由についてはよく聞くといい。慣習や常識が理由ならそれは過去のことなので別に無視してもいいけど、相手の性格や経歴は現在に関わることなので自分が盲目になっているだけかも。
 
 結婚するなら少なくとも生活リズムや金銭感覚が合う人がいい。
+
+結婚していて生活が苦しいなら、良い結婚ではない。
+まぁ、将来的に相手が支えてくれそうなら投資しておいてもいい。
+
+家庭では、妻が夫を家事や社交で支えて、夫が妻に頭が上がらない状態であるべき。
+
+夫でも妻でも働かないと価値は下がる。
+
+夫婦にとって「働く」とは「家のためになる」ことであって、そうでないなら「働いた」とは言えない。
+
+育児は確実に家のためになるけど、家計を支える方よりまずい飯とか、別に必要ないくらい細かい掃除とか、余計な交友関係とかは働いたとは言えない。
+価値観がずれているのが問題なら、まずはお互いに話し合って価値観のずれを直さないといけない。パートナーに「働いた」と認められないと意味がない。
+
+- 何が「家のためになった」「働いた」と言えるか、逆に何がそうでないか
