--- a/shared/family/家族.md
+++ b/shared/family/家族.md
@@ -27,3 +27,6 @@
 母親はごはんが美味しいと立場が強い。
 
 夫婦のどっちもめんどいことか、どっちもやりたいことは二人でやった方がいい。
+
+家族の間で「働いた」と言えるのは、「家族のためになった」ことだけ。
+働き過ぎて子供を構ってやれなかったり、別にパートナーが求めてないレベルの細かい掃除とかどうでもいい付き合いとかは「働いた」とは言えない。
