--- a/shared/trust/intimacy/友人.md
+++ b/shared/trust/intimacy/友人.md
@@ -148,3 +148,6 @@
 誰とでも友人になる必要はない。むしろ、友人になる必要がない人をあらかじめ除くための振る舞いをする。
 
 楽しい、嬉しい、美味しい、といった感覚を共有できる人が友人になりやすい。
+
+友人の金欠は不便だけど、それで金を貸すのも違う。
+まぁ、少額を店でまとめ払いして、「次はそっちが奢ってね」っていうくらいならいい。
