--- a/shared/trust/信頼.md
+++ b/shared/trust/信頼.md
@@ -478,3 +478,8 @@ https://www.humanvalue.co.jp/keywords/theory-of-success/
 本当にごく限られた範囲で信頼できる部分だけをうまく使うのが重要。
 
 接待によって相手を楽しませるのも信頼される方法ではあるけど、それだけではない。
+
+- 何を基準に信頼するか
+  - 何を期待するか
+  - 何を期待しないか
+- 何に価値を認めるか
