--- a/shared/communication/channels/sex/女性.md
+++ b/shared/communication/channels/sex/女性.md
@@ -4,3 +4,12 @@
 
 女と喧嘩になったら「でも俺が悲しくなったのは事実なんだから」で勝てる。
 https://x.com/karasu_pua/status/1937868155831152821?s=12
+
+女性は、そもそも出産というハンデを抱えている。
+どうしても労働者としては見劣りしてしまうので、男性よりも稼ぐのは難しい。
+だからこそ家庭に入って金銭以外の部分で家庭を支える方が楽。そちらの方がパートナーと対等になりやすい。
+まぁ、ペットとして生きたいという人もいるかも。
+
+一般的には、力もないし、体力もない。
+
+労働者として男女の価値を同じくするなら、男性の出産・育児休暇を法律で強制するくらいしかない。
