--- a/shared/leisure/examples/travel/草花の見頃.md
+++ b/shared/leisure/examples/travel/草花の見頃.md
@@ -2,32 +2,50 @@
 
 記載している時期は東京が基準。春夏は暑いところ、秋冬は寒いところの方が通常早く咲く。
 
-実際の開花状況はその場所のSNSや公式サイトで公開されている開花状況やウェザーニュースなどを確認するといい。
+実際の開花状況は場所や天候によってズレるので、その場所のSNSや公式サイトで公開されている開花状況やウェザーニュースなどを確認するといい。
 
 ## 春
 
 - 椿: 3月
 - チューリップ: 3月下旬
+  - 昭和記念公園
 - 桜: 4月上旬
+  - 上野公園
+  - 昭和記念公園
 - 菜の花: 4月上旬
+  - 昭和記念公園
 - つつじ（春）: 4月下旬
+  - 塩船観音
 - しゃくなげ: 4月下旬
+  - 神代植物公園
 - ポピー: 4月下旬
 - バラ（春）: 5月
+  - 神代植物公園
 - ネモフィラ: 5月上旬
-- あじさい: 6月中旬
+  - 舎人公園
+- 梅
+- 藤
+- 牡丹
 
 ## 夏
 
-- 睡蓮: 7月中旬から一月程度
+- あじさい: 6月中旬
+  - 鎌倉（長谷寺、明月院、成就院）
+- 蓮: 7月中旬から一月程度
+  - 不忍池
+- ひまわり
+  - 葛西臨海公園
 
 ## 秋
 
 - コスモス（秋）: 9月下旬
+  - 昭和記念公園
 - コキア（赤）: 10月上旬
-- 彼岸花: 10月中旬
+- 彼岸花: 9月下旬から1週間程度
 - ダリア: 10月下旬
+  - 上野東照宮
 - バラ（秋）: 10月下旬から半月程度
+  - 神代植物公園
 - 菊: 11月上旬
 - もみじ: 11月下旬
 - いちょう: 11月中旬から半月程度
@@ -35,3 +53,8 @@
 ## 冬
 
 - メタセコイア: 12月上旬
+  - 井の頭公園
+
+## メモ
+
+https://ganref.jp/subject/flower/
