--- a/shared/communication/media/language/languages/english/英語の発音.md
+++ b/shared/communication/media/language/languages/english/英語の発音.md
@@ -71,3 +71,5 @@ vとか腹式呼吸じゃないと上手く音が鳴らない。
 英語は、日本語話者からするとiは「え」に近いし、aは「お」に近いし、oとuは「あ」に近いし、eは「い」に近い。なんもわからん。
 
 英語は喉を深くしないと発音がおかしくなる。
+
+kは無声音だけど、chは音を鳴らすというより口形を残す感じ。
