--- a/shared/music/音楽の分類.md
+++ b/shared/music/音楽の分類.md
@@ -22,6 +22,7 @@
 - ファンク
 - ニュージャックスイング
 - クラブ
+- シティーポップ
 
 ポップスはポピュラー音楽、大衆音楽のこと。
 
@@ -32,3 +33,5 @@ R&Bは偶数拍にアクセントが来るのが特徴。
 https://youtu.be/QAHp8unLKwM?si=dZlyBF6sp-F95S_s
 
 オペラは歌劇。歌に加えて劇の要素がある。
+
+昭和の夏っぽい爽やかな曲はシティーポップ。TUBEのシーズンインザサンとか、竹内まりやのプラスティックラブとか。
