--- a/shared/science/魔法.md
+++ b/shared/science/魔法.md
@@ -1,3 +1,5 @@
 世界に存在しない法則を、魔法という。
 
 「かつてはリンゴが落ちる理由さえ、人に食を与えるための神の愛だと言われていたように…人類はかつて無知そのものを"魔法"と呼んだのです。」『うみねこのなく頃に』
+
+信じることで魔法が生まれる。それを信じさせるのが魔法使い。
