--- a/shared/trust/信頼の前提.md
+++ b/shared/trust/信頼の前提.md
@@ -4,3 +4,5 @@
 自動車は移動ができても料理ができるわけじゃないし、ボールペンは文字が書けても誰かと交渉してくれるわけじゃない。
 
 信頼できる範囲を見極めて、その範囲でできるだけ多く任せることで自分が楽に、自由になれる。
+
+誰かに期待するためには、相手の振る舞いや結果をよく見て、期待できる範囲を見極めないといけない。まず相手に関心を持つ。
