--- a/shared/voice/training/tips/声を出す.md
+++ b/shared/voice/training/tips/声を出す.md
@@ -272,3 +272,5 @@ https://youtu.be/OEjipkH95_0?si=9RxpD90fqQnpNSXy
 
 まずは横隔膜を下げて息を細く強く吐く。
 そのまま、声を出すというよりは、声帯を閉じるだけ。
+
+まず強くて細い息を送る。声はそれに乗せるだけ。喉は開いて、無理に息を強くしない。息が弱かったらそれに合った高さまでしか出さない。喉で息を絞って高い声を出すのは悪い癖。
