--- a/shared/voice/training/ボイストレーニング.md
+++ b/shared/voice/training/ボイストレーニング.md
@@ -1,3 +1,8 @@
+1. 強くて細くて安定した息を送る練習
+2. 息を吐きながら声帯を少しずつ閉じて声量を大小する練習（喉を開いて声を出す練習）
+3. 発音を抜きにして「おうおう」で歌や話を発声する
+4. 発音を抜きにしてリップロールで歌や話を発声する
+
 発声や滑舌をよくするトレーニングの総称。
 
 [【初級・中級】基本的なボイトレ 6 個をまとめて解説！自宅でできるボイストレーニング | ボイトレブック powered by シアー](https://www.clubjungle.jp/technique/240/)
