--- a/shared/government/王.md
+++ b/shared/government/王.md
@@ -36,3 +36,9 @@
 - 王は何をしなければならないか
 - 王は何をしてはいけないか
 - 民と国の関係はどうあるべきか
+
+https://youtu.be/y0yJwfUmC-g?si=QxVNydA_1hTznSEx
+女系天皇を認めると継承の対象者が増えて面倒なことになる。あと女性天皇に男性が婿入りすると血統が途絶えやすくなる問題もある。王朝が変わってしまう。
+ただ、男系天皇のみとするなら、一夫一妻制に無理がある。せめて三人くらいは皇妃を持って男子を産まないといけない。
+
+女系天皇の禁止はむしろ婿入りした王配が浮気したりして変な血が混ざらないように作られた制度で、男を猿だと思ってる。
