--- a/shared/government/警察.md
+++ b/shared/government/警察.md
@@ -1,3 +1,5 @@
 警察は国民全体をなんとなく守るためにあるので、個人を守らない。
 
 公安は国家を外敵から守る組織なので、国民を守るとは限らない。
+
+契約駐車場に誰かが違法駐車している場合、警察には「駐車場に放置車両がある、盗難車かもしれない」と伝えると対応が早くなりやすい。
