--- a/shared/story/物語.md
+++ b/shared/story/物語.md
@@ -137,3 +137,5 @@ https://www.bbc.com/japanese/features-and-analysis-44286945
 ストーリーは結末よりも経緯が重要。まぁ、結末があまりにも悪いと後味悪いけど。
 
 序盤に強い敵に負けて見逃されるのは主人公がさらに強くなろうとする簡単な理由づけになる。
+
+物語ではキャラの特徴を誇張してみる。
