--- a/shared/decision/information/曖昧さ.md
+++ b/shared/decision/information/曖昧さ.md
@@ -17,3 +17,5 @@
 
 完全に言い切れることだけ言おうとすると、曖昧な表現になりやすい。
 コミュニケーションとしては曖昧さを取り除いて言い切った方が伝わりやすい。
+
+猫箱の猫が生きていようと死んでいようと、さっさと開けて餌をやるか供養するか、どちらかしかない。10日も待てば観測しなくても猫は死ぬ。曖昧さを許していい場合と許してはいけない場合がある。
