--- a/shared/human/being/人生.md
+++ b/shared/human/being/人生.md
@@ -46,3 +46,5 @@ https://x.com/cicada3301_kig/status/1914565545967428076?s=46
 「全部食べ切る」ことを目指すのか、「満腹」や「腹八分目」を目指すのかで進め方も違う。幸福と成功の軸。両方のちょうどいいところを目指すこともできる。まぁ、本質的にはどっちも意味がないのでどっちでもいい。
 
 借金が返せなくて自己破産するクズもいるのだし、気楽に生きていい。
+
+「自己満足。大いに結構じゃないですか。俺はそいつが実は人生ってヤツではないかと思ってます。」『うみねこのなく頃に』
