--- a/shared/leisure/examples/karaoke/カラオケの店.md
+++ b/shared/leisure/examples/karaoke/カラオケの店.md
@@ -13,3 +13,5 @@
 まねきねこは会員ランクが年間なので、歌広場よりランクを維持しやすい。
 
 まねきねこの朝カラでも1時間半くらいならワンドリンクでいい。2時間超えるならドリンクバーにしないと足りない。
+
+まねきねこの朝うたがドリンクバーになって1.5h以下が安くなったので、1hくらいで頻繁に行ってもいい。
