--- a/shared/technique/基礎と応用.md
+++ b/shared/technique/基礎と応用.md
@@ -43,3 +43,5 @@ installation と advanced の対応もあり。
 
 応用すること自体の技術を覚えるには、ベースになる素材の数は少なくてもいいのかも。
 組み合わせることを考える。少ない手札でやりくりする経験が役に立つ。
+
+基礎がないと遊べない。遊びの余地を広げるのが重厚な基礎だ。
