--- a/shared/voice/training/exercises/リップロール.md
+++ b/shared/voice/training/exercises/リップロール.md
@@ -81,3 +81,5 @@ https://youtu.be/CJQRga_MxjQ?si=alWDmYbCHVLSAlef
 リップロールと同じ感覚のまま、口を開けて、できるだけ小声でファルセットしてみる。
 
 リップロールは唇を柔らかく使えればいいので、スケール練習までする必要はない。
+
+リップロールは呼気圧を安定させるのがコツ。
