--- a/shared/war/戦争の目的.md
+++ b/shared/war/戦争の目的.md
@@ -15,3 +15,5 @@ Lose-WinをLose-Loseにすること。
 この場合は卑怯な手でも何でも使う。最終的に恐怖を与えられるなら過程は問わない。
 
 怖くても戦わないといけないと思ったら、戦おうとする。やりすぎてはいけない。「逃げれば追ってこない」と思わせるのがちょうどいい。
+
+「敵対すれば無傷では済まない」、「敵対するべきではない」と思わせるのが戦争の目的。負けてもいい。
