--- a/shared/communication/frameworks/assertion/根拠.md
+++ b/shared/communication/frameworks/assertion/根拠.md
@@ -131,3 +131,5 @@ explanation も参照。
 根拠のない歴史を語る人がいたら、その周辺の歴史観についても聞いてみる。
 
 根拠を示すより、相手の根拠を追求する。
+
+証明は、命題が真か偽かを明らかにする。単純に「あるかないか」の場合もあるし、「XXはXX以上である」みたいに数字で決まる場合もある。「真である確率はXX%である」みたいに確率的な結論が出る場合もある。
