--- a/shared/trick/騙し.md
+++ b/shared/trick/騙し.md
@@ -1,5 +1,7 @@
 # Trick
 
+ごまかし、いたずら、錯覚、騙し。
+
 誤った判断をさせること。
 判断を誘導すること。
 
@@ -31,3 +33,7 @@
 
 逆に、驚かすのと騙すのは紙一重でもある。
 驚かすためにしたことで相手が「騙された」と感じることもある。
+
+自らの意図を隠すこと。
+
+情報を隠す、あるいは誤った情報を与えることで誤った判断をさせる。
