--- a/shared/health/medicine/symptoms/炎症.md
+++ b/shared/health/medicine/symptoms/炎症.md
@@ -1,4 +1,17 @@
+炎症の四要素:
+
+1. 腫れ
+2. 発赤（赤くなる）
+3. 痛み
+4. 熱
+
+血管が拡張して血液が流れ込んできた結果としてこの4つの症状が表に出る。
+
 筋肉痛や関節痛は主に患部の炎症。ロキソニンとか炎症止めの薬を飲んだり、動かさず安静にしたりすると治りやすい。ただ、そもそも軟骨がすり減って神経を圧迫するような場合は改善しない。
 
 熱が出るのも炎症に近い。
 ロキソニンが効くのも同じ症状だから。
+
+炎症は体内に入った異物に対して白血球などが対処しようとしている。免疫が働いて病原体と戦っている。
+
+免疫細胞や壊れた細胞、壊れた病原体、などを含む粘液が膿。炎症の後に膿が溜まることがある。
