--- a/shared/voice/training/ボイストレーニング.md
+++ b/shared/voice/training/ボイストレーニング.md
@@ -76,3 +76,5 @@ A4とかの国際表記で説明してない講師はちょっと怪しい。hiA
 大きな声を出せるカラオケやスタジオで練習する日はそこで集中して練習する。
 
 声はまず良い音を目指すけど、最終的には言葉にしないといけない。音として良く、さらに言葉として伝わらないといけない。
+
+声帯は痛めやすいので、リップロールや無声音を使ったトレーニングや体でリズムをとる、呼吸筋を鍛えるトレーニングを重点的に行なう。
