--- a/shared/action/恐怖.md
+++ b/shared/action/恐怖.md
@@ -24,3 +24,12 @@
 妖怪でもなんでも、理解できないものに名前と性格をつけることで恐怖を払う。
 
 行動できない要因。
+
+ホラー要素:
+
+- オカルト: 幽霊怖い
+- サイコ: 人間怖い
+- モンスター: 暴力怖い
+- サスペンス: 心理的な不安感や不条理を想起させる
+- スプラッター: グロテスクな画で怖がらせる
+- ジャンプスケア: 突発的に大きな音を出したり恐ろしい画を出したりして驚かせる
