--- a/shared/war/tips/恐怖を与える.md
+++ b/shared/war/tips/恐怖を与える.md
@@ -15,3 +15,5 @@
 わからないことは恐ろしい。
 恐怖を与えるためには、相手に理解できないことをする。意味や利益のない行動、リスクの高い行動は理解の埒外になりやすい。
 あとは単純に痛みを与えるのもいいが、恨みを買うほど体を損壊するべきではない。
+
+恐怖を与えることは、相手の行動を抑止することにつながる。
