--- a/shared/music/vocal/特徴的な歌唱スタイル.md
+++ b/shared/music/vocal/特徴的な歌唱スタイル.md
@@ -1,4 +1,12 @@
-# Jodel
+- 独唱
+- 合唱
+  - 斉唱
+  - 輪唱
+  - アカペラ: 伴奏なしで歌う少人数の合唱スタイル
+- ラップ
+- ヨーデル
+
+## ヨーデル
 
 チェストボイスとファルセットを繰り返し歌う歌唱法。
 
@@ -9,3 +17,10 @@
 練習や準備運動にもいい。
 
 ヨーデルのためには声帯の開け閉めだけですばやく地声と裏声を切り替えないといけないので、地声でも裏声でも使える息の圧で、余計なところに力が入ってはいけない。
+
+## 斉唱
+
+Our Bright Paradeなんかは一人で歌うとテンポが速すぎて苦しい。斉唱というか、複数人でレガートを生み出すのが前提の曲。
+
+高音はパワーが足りなくなりがちなので、女声は斉唱で重ねるのが合っている。
+逆に男声でも超低音のバスを重ねて楽器のように使うこともある。
