--- a/shared/communication/真実.md
+++ b/shared/communication/真実.md
@@ -4,3 +4,5 @@
 直接的に事実を伝えても意味がない。その人の信じる真実と一致しつつ、認識を変えるような事実が必要。
 
 真実は単に「信じられる」ことでしかないので、受け手が決めるものだ。自分から「真実はこうだ」と言う人は詐欺師か馬鹿だと思っていい。
+
+「愛がなければ真実は見えない」『うみねこのなく頃に』
