--- a/shared/story/物語.md
+++ b/shared/story/物語.md
@@ -139,3 +139,5 @@ https://www.bbc.com/japanese/features-and-analysis-44286945
 序盤に強い敵に負けて見逃されるのは主人公がさらに強くなろうとする簡単な理由づけになる。
 
 物語ではキャラの特徴を誇張してみる。
+
+喜劇を描くのは悲劇を描くよりも難しい。
