--- a/games/Pawapro/2024/栄冠ナインの選手育成.md
+++ b/games/Pawapro/2024/栄冠ナインの選手育成.md
@@ -121,19 +121,16 @@
 
 もっともボールに触る機会が多い野手。捕球は高めにしたい。
 
-- バランス重視
-- 肩力、捕球の優先度が高い
-- 走力の優先度が低い
-- キャッチャーB以上にしたい
-- 球界の頭脳、ささやき戦術があると最高
-- できれば送球C以上にしたい
+- 守備重視
+- 肩力、捕球、守備力の優先度が高い
+- キャッチャーB以上にしたい、球界の頭脳、ささやき戦術があると最高
+- 送球は高いほどよい、送球E以下は避けたい
 
 目標:
 
-1. F-F-F-E-F-E; 160: 最低限の盗塁と後逸を防ぐ
-2. D-D-F-C-E-D; 270: 中堅
-3. B-C-E-C-E-D; 320: 強豪
-4. B-C-B-A-C-C; 400: 名門
+1. F-F-F-D-F-E; 170: 弱小（盗塁が全部成功するのを防ぐ）
+2. C-D-F-D-F-E; 240: 中堅
+3. B-D-E-C-E-E; 300: 強豪
 
 捕球が高いと後逸しにくい。
 
@@ -164,10 +161,9 @@ DかCくらいで牽制できればまずは十分なので、一旦打撃能力
 
 目標:
 
-1. F-E-F-F-F-E; 160: 捕球は早めに上げる
-2. D-D-E-F-F-E; 220: 中堅
-3. C-D-B-F-D-D; 300: 強豪
-4. A-C-A-E-C-C; 380: 名門
+1. F-F-F-F-F-F; 120: 弱小
+2. C-D-D-F-F-E; 240: 中堅
+3. A-D-B-F-E-E; 300: 強豪
 
 ## 二塁手
 
@@ -179,14 +175,14 @@ DかCくらいで牽制できればまずは十分なので、一旦打撃能力
 
 目標:
 
-1. F-F-E-E-E-F; 180
-2. D-E-C-E-E-F; 250: 中堅
-3. C-D-B-E-C-E: 320: 強豪
-4. A-C-S-D-A-E: 400: 名門
+1. F-F-D-F-D-F; 180: 弱小
+2. D-F-B-F-C-F; 240: 中堅
+3. C-E-A-E-B-F: 300: 強豪
 
 ## 三塁手
 
 - 打撃重視
+- 肩力D > ミート > パワー = 走力 > 守備力 > 捕球
 - 肩力の優先度が高い
 - 走力、守備力、捕球の優先度が低い
 - 送球C以上にしたい
@@ -194,10 +190,9 @@ DかCくらいで牽制できればまずは十分なので、一旦打撃能力
 
 目標:
 
-1. F-F-F-D-F-F; 150: 左方向への打球が全部内野安打になるのを防ぐ
-2. D-D-F-C-E-F; 250: 中堅
-3. C-D-B-C-E-E; 320: 強豪
-4. A-C-A-C-D-D; 400: 名門
+1. F-F-F-D-F-F; 150: 弱小（左方向への打球が全部内野安打になるのを防ぐ）
+2. B-D-F-C-F-F; 240: 中堅
+3. B-D-C-C-E-F; 300: 強豪
 
 強豪以上と戦うなら肩力Cはないと簡単に内野安打される。
 とりあえずCあれば走力Aでも簡単には内野安打できない。中堅以下ならDでもなんとかなる。
@@ -205,20 +200,21 @@ DかCくらいで牽制できればまずは十分なので、一旦打撃能力
 ## 遊撃手
 
 - 守備重視
-- 走力、肩力、守備力の優先度が高い
-- 捕球の優先度が低い
+- 走力、守備力、肩力の優先度が高い
 - 守備職人があると強い
 - 送球B以上があると強い
 - 送球E以下は避けたい
 
 目標:
 
-1. F-F-E-E-E-F; 180
-2. E-E-C-D-E-F; 250: 中堅
+1. F-F-D-F-D-F; 180: 弱小
+2. E-F-C-D-D-F; 240: 中堅
 3. D-D-B-C-D-E; 320: 強豪
 4. B-C-S-C-A-E; 400: 名門
 
 走力よりも守備力を上げたほうが守りは強い。
+
+セカンドよりも広い範囲を守るので、守備より走力優先。
 
 セカンドとショートは守備力の方が重要だけど、走力は攻撃にも使えるので悩ましいところ。まず守備力Cくらいまで上げて、あとは打撃と走力優先でもいいかも。
 
@@ -226,21 +222,18 @@ DかCくらいで牽制できればまずは十分なので、一旦打撃能力
 
 - 打撃重視
 - 走力の優先度が高い
-- 守備力や捕球の優先度が低い
 
 目標:
 
-1. F-F-C-F-F-F; 150
-2. D-D-C-E-F-F; 240: 中堅
+1. F-F-C-F-F-F; 150: 弱小（ゆるい外野フライがだいたい取れる）
+2. C-E-C-E-F-F; 240: 中堅
 3. C-D-B-D-E-E; 300: 強豪
-4. B-C-S-C-D-E; 370: 名門
 
 まずはボールに追いつかないとどうしようもない。
-ただ、追いつけるようになったら捕球Eにはしたい。
 
 外野の肩は右、中、左の順で強い方がいい。特に右は2塁から3塁へのタッチアップを咎めることがある。ただ、実際に咎めるにはかなり肩力が必要。
 
-外野の守備はとにかく走力を上げて、CかBになってからそれ以外を上げるくらいでいい。まぁ、Gは先に消したいけど。あとは捕球、肩力、守備力の順。打撃優先でいい。
+外野の守備はとにかく走力を上げて、CかBになってからそれ以外を上げるくらいでいい。まぁ、Gは先に消したいけど。あとは肩力E、捕球E、守備力Eの順。打撃優先でいい。
 
 ## ポジションの互換性
 
