--- a/shared/learning/学習.md
+++ b/shared/learning/学習.md
@@ -317,3 +317,5 @@ OODA ループが学習の基本。
 そんなことして意味あんの？ってところもやり込むのが遊びとしてのゲームの楽しみ方。
 
 「まるで気ままな寄り道のような、道無き道を行くような、ガラクタの山から宝を見つけ出すような」（『対ありでした。』）
+
+学習の目的は、成功すること。
