--- a/shared/success/成功.md
+++ b/shared/success/成功.md
@@ -398,3 +398,5 @@ achievementはwork+successで、何かを変えないと達成とは言わない
 成功しているうちはそのまま進めていい。
 
 失敗したらすぐ専門家に相談するのが上達の近道。
+
+learning, thinking, training, なども成功を目的としたもの。
