--- a/shared/documentation/文書化.md
+++ b/shared/documentation/文書化.md
@@ -2,7 +2,7 @@
 
 文書化
 
-知識、経験、情報、などを文書にする。
+知識、経験、情報、などを文書にする。記録を残す。
 
 ナレッジマネジメントとも関連する。
 
@@ -41,3 +41,5 @@
 
 ドキュメントに残す場合、できるだけオープンにするべき。
 読める人が多いほどフィードバックも増えて、より役に立つドキュメントになる。
+
+Communicationの側面もあるけど、まずは記録を残すことが重要。
