--- a/shared/entertainment/humor/ユーモア.md
+++ b/shared/entertainment/humor/ユーモア.md
@@ -234,3 +234,7 @@
 
 自由さと奇抜さは同じものかどうか。
 文脈は違うけど似ている。自由というのは芸術や判断の文脈。自然と対立するもの。奇抜というのは、普通や一般と対立するものかな。
+
+過ちを犯すからこそ魅力があるのかも。
+
+誤ちこそがユーモアの基礎。失敗や偏見が人間味になる。もっというと誤ちを認めること、誤ちに目を向けて、臭いものに蓋をしないこと。
