--- a/shared/execution/monitoring/ロギング.md
+++ b/shared/execution/monitoring/ロギング.md
@@ -1,4 +1,4 @@
-# ロギング Logging
+# Logging
 
 障害の復旧や原因究明のために記録を残す。
 
@@ -7,3 +7,7 @@
 どうしてベロシティや作業時間を記録するか。
 
 ベロシティを記録するのはキャパシティを予測するため。余裕があって追加したならキャパシティはもっと高いはずなので記録した方がいいけど、突発的に割り込みが入るのはキャパシティを落とすので記録しない方がいい。
+
+元々は船舶の用語で、航海日誌・運航記録のことを log といった。
+
+読み取り、書き込み、操作、入力、出力、などを記録して、障害の原因追求を助ける。
