--- a/shared/business/examples/マネジメント業.md
+++ b/shared/business/examples/マネジメント業.md
@@ -4,3 +4,5 @@
 ホロは大きくなって武道館とか大きな夢は叶えやすくなったけど、制限が多くなってるだろうから個人の小さな幸せを求めるには向かなくなってる。そのあたりで齟齬が出てくる時期ではある。
 
 Vtuberって会社のブランドもあるけど、結局は個人の才覚に依存してるから独立しやすい分野ではある。
+
+ホロライブみたいに、看板が大きくなりすぎると逆に小さな会場のライブに人が回せなくなって大きな会場のライブしかできなくなることもある。トップ層のタレントばかりにリソースが割かれて、小さな会場でライブしたいタレントとか、ニッチな要求には対応できなくなってタレントが離脱してしまうこともある。
