--- a/shared/human/being/well/幸せになる.md
+++ b/shared/human/being/well/幸せになる.md
@@ -5,3 +5,14 @@
 「運が良い」と感じられるのが幸せ。
 
 何かを良くしていく。
+
+愛していても幸せになれないなら離れるべきではある。ただ、感情的なものなので簡単ではない。人間は複雑だ。
+
+愛は感情だけど、幸せというのは理性的に選択した結果だ。
+
+政府や企業、家族、友人、など、あらゆるものが幸せになるための”手段”にすぎない、という考え方はあまりにも理性的。
+幸せになれないとわかっていても執着があって手放せないということはありうる。
+
+愛や執着が関わると、自ら問題を複雑にしてしまう。
+まず執着を手放すのが幸せになるための第一歩。
+ただ、その複雑さが人間味でもある。
