--- a/shared/people/コミュ症.md
+++ b/shared/people/コミュ症.md
@@ -24,3 +24,5 @@ https://osakamental.com/symptoms/communication.html
 コミュニケーションは正常だけど、うまく輪に入れないというか。
 
 頭の回転が遅いのに情報は持っていると何を言わないかを判別するのに時間がかかっているのかも。
+
+人見知りでもコミュ力がある人はいる。
