--- a/shared/war/戦争.md
+++ b/shared/war/戦争.md
@@ -162,3 +162,5 @@ Lose-WinをLose-Loseに持ち込む。
 生き延びるためには、相手に恐怖を与えなければならない。
 
 戦争とゲームの違いは、べつに負けてもいいところ。恐怖を与えられるなら、負けてもいい。毒を持った生き物が食べられることでいずれ警戒して食べられなくなるのと同じ。
+
+戦争はゲームのように優劣を競うものではないが、付随的なゲーム性はある。
