--- a/games/Pawapro/2024/栄冠ナインの選手育成.md
+++ b/games/Pawapro/2024/栄冠ナインの選手育成.md
@@ -68,16 +68,6 @@
 
 転がせが強いので、パワーより走力を優先したほうがいいかも。
 
-ミートBになったらそのままAにするよりパワーか走力を上げたほうがいいかも。
-
-攻撃能力の上げ方の基本:
-
-1. ミート、パワー、走力をEにする
-2. ミートをCにする
-3. パワーをC、または走力をBにする
-
-打撃力CEEはBEEにするよりCECかCCEにしたほうが強い。
-
 ミートAよりはパワーCの方が優先かも。パワーが低いと速球に押し負ける。
 
 守備で走力を使わない捕手、一塁手、三塁手は、盗塁できるくらいまで上げないとあまり変わらない。
@@ -89,48 +79,67 @@
 
 それ以外はとりあえず打撃能力をDDDにする。ここまでくると2割近く打てるはず。代打で出せなくもない。
 
-捕球Cくらいあるとライナーでもかなり抜かれにくくなる。
-捕手でもCあれば十分。二三遊外あたりならEでも十分戦える。
+基本的にはまず最低限の打撃能力が必要だけど、名門として安定させるなら守備能力も伸ばしたい。まぁ、最低ラインを越えたらあとは好み。
+セカンドとショートは最低限の打撃より守備優先でもいい。とはいえ、EEくらいは欲しい。
+
+## 打撃力
+
+- ミートがDかCになってからパワーや走力を上げる
+- パワーがDになったら弾道を3にすると長打力ボーナスが乗る
+- 守備で走力が必要なら、パワーより走力を優先する
+
+パワーを上げるのはミートがCになってからでいい。
+ただ、弾道3以上なら早めにEやDにすると長打力ボーナスが乗る。それでもまずミートDまでは上げたい。
+
+打撃力CEEはBEEにするよりCECかCDEにしたほうが強い。
+
+走力を伸ばさないなら、最低限のミートを確保したあとはパワーと弾道が優先。走力を上げるよりも早い。
+
+ミートを上げてもパワーか走力がないと塁に出れない。
+
+対ストレートが結構強いと思ってる。「打つのが上手くなる」というのは、ゲーム的には打球速度が上がるらしい。ホームランも打ちやすくなる。
+
+打撃能力はACAが基本で、走力がSあるならBDSでもいい。BDAでもそこそこ打てる。
+
+ミートBになったらそのままAにするよりパワーか走力を上げたほうがいいかも。
 
 打撃能力はBCBやBDAを目指すか、DAFを目指すか。
 守備に走力が必要ないならパワーだけ上げるほうが早いけど、アベレージが高くても3割くらいになる。
 
-打撃能力はACAが基本で、走力がSあるならBDSでもいい。BDAでもそこそこ打てる。
+## 守備力
 
-打撃能力FFFから最初に一つだけEにするならパワーだと思ってる。走力Eじゃたまたま当たっても間に合わないし。
-でもFFDならミート。
-
-守備力が影響するのは、捕球から送球までの早さと動き出しの早さ。
-
-ミートを上げてもパワーか走力がないと塁に出れない。
-
-ファーストとサードは捕球Cあるとかなり抜かれにくくなる。ただ、まずは打撃。
-
-基本的に捕球よりは走力や守備力が優先。追いつけないと取れない。ただ、捕手や一塁手、三塁手は捕球が優先。
+- 打球に追いつけるようになるまで捕球はFでいい
 
 内野は守備力と捕球が高いほどいい。
 
-対ストレートが結構強いと思ってる。「打つのが上手くなる」というのは、ゲーム的には打球速度が上がるらしい。ホームランも打ちやすくなる。
+基本的に捕球よりは走力や守備力が優先。追いつけないと取れない。ただ、捕手や一塁手、三塁手は捕球が優先。
 
-基本的にはまず最低限の打撃能力が必要だけど、名門として安定させるなら守備能力も伸ばしたい。まぁ、最低ラインを越えたらあとは好み。
-セカンドとショートは最低限の打撃より守備優先でもいい。とはいえ、EEくらいは欲しい。
+ファーストとサードは捕球Cあるとかなり抜かれにくくなる。ただ、まずは打撃。
 
-走力を伸ばさないなら、最低限のミートを確保したあとはパワーが優先。それでもミートDかCくらいは欲しい。
+捕球Cくらいあるとライナーでもかなり抜かれにくくなる。
+捕手でもCあれば十分。二三遊外あたりならEでも十分戦える。
+
+守備力が影響するのは、捕球から送球までの早さと動き出しの早さ。
+
+## 補欠
+
+- ミートまたは走力優先
+
+スタメン以外は代打や代走で出して経験値を稼ぎたいので、まずはミートか走力から上げる。ただ、代わりの守備も必要。一、三、外、投、あたりは代えやすい。
 
 ## 捕手
 
 もっともボールに触る機会が多い野手。捕球は高めにしたい。
 
-- 守備重視
-- 肩力、捕球、守備力の優先度が高い
+- 守備優先（肩力D、捕球E、守備力E）
 - キャッチャーB以上にしたい、球界の頭脳、ささやき戦術があると最高
 - 送球は高いほどよい、送球E以下は避けたい
 
 目標:
 
-1. F-F-F-D-F-E; 170: 弱小（盗塁が全部成功するのを防ぐ）
-2. C-D-F-D-F-E; 240: 中堅
-3. B-D-E-C-E-E; 300: 強豪
+1. F-F-F-D-E-E: 盗塁と後逸を最低限防ぐ
+2. C-D-F-D-E-E: 中堅
+3. B-D-E-C-E-E: 強豪
 
 捕球が高いと後逸しにくい。
 
@@ -155,19 +164,19 @@ DかCくらいで牽制できればまずは十分なので、一旦打撃能力
 
 捕手の次にボールに触る選手。捕球は早めにEにしたい。できればCあると強い。
 
-- 打撃重視
+- 打撃優先
 - 捕球の優先度が高い
 - 走力、肩力、守備力の優先度が低い
 
 目標:
 
-1. C-F-F-F-F-F; 160: 弱小
-2. C-E-C-F-F-E; 240: 中堅
-3. A-D-B-F-E-E; 300: 強豪
+1. C-F-F-F-F-E: 最低限エラーを減らしつつ打撃を伸ばす
+2. C-E-C-F-F-E: 中堅
+3. A-D-B-F-E-E: 強豪
 
 ## 二塁手
 
-- 守備重視
+- 守備優先（走力D、守備力D）
 - 走力と守備力の優先度が高い
 - 捕球の優先度が低い
 - 守備職人があると強い
@@ -175,40 +184,38 @@ DかCくらいで牽制できればまずは十分なので、一旦打撃能力
 
 目標:
 
-1. F-F-D-F-D-F; 180: 弱小
-2. C-F-C-F-C-F; 240: 中堅
-3. C-E-A-E-B-F: 300: 強豪
+1. F-F-D-F-D-F: 最低限の二遊間
+2. C-F-C-F-C-F: 中堅
+3. C-E-A-E-B-F: 強豪
 
 ## 三塁手
 
-- 打撃重視
-- 肩力の優先度が高い
+- 守備優先（肩力D）
 - 走力、守備力、捕球の優先度が低い
 - 送球C以上にしたい
 - 送球E以下は避けたい
 
 目標:
 
-1. F-F-F-D-F-F; 150: 弱小（左方向への打球が全部内野安打になるのを防ぐ）
-2. C-D-E-D-F-F; 240: 中堅
-3. B-D-C-C-E-F; 300: 強豪
+1. F-F-F-D-F-F: 左方向への打球が全部内野安打になるのを防ぐ
+2. C-D-E-D-F-F: 中堅
+3. B-D-C-C-E-F: 強豪
 
 強豪以上と戦うなら肩力Cはないと簡単に内野安打される。
 とりあえずCあれば走力Aでも簡単には内野安打できない。中堅以下ならDでもなんとかなる。
 
 ## 遊撃手
 
-- 守備重視
-- 走力、守備力、肩力の優先度が高い
+- 守備優先（走力D、守備力D、肩力E）
 - 守備職人があると強い
 - 送球B以上があると強い
 - 送球E以下は避けたい
 
 目標:
 
-1. F-F-D-F-D-F; 180: 弱小
-2. E-F-C-E-C-F; 240: 中堅
-3. C-F-A-D-B-F; 300: 強豪
+1. F-F-D-E-D-F: 最低限の二遊間
+2. E-F-C-E-C-F: 中堅
+3. C-F-A-D-B-F: 強豪
 
 走力よりも守備力を上げたほうが守りは強い。
 
@@ -218,14 +225,13 @@ DかCくらいで牽制できればまずは十分なので、一旦打撃能力
 
 ## 外野手
 
-- 打撃重視
-- 走力の優先度が高い
+- 走力優先（走力C）
 
 目標:
 
-1. F-F-C-F-F-F; 160: 弱小（ゆるい外野フライがだいたい取れる）
-2. C-E-C-E-F-F; 240: 中堅
-3. C-E-A-E-E-E; 300: 強豪
+1. F-F-C-F-F-F: 外野フライがだいたい取れる
+2. C-E-C-E-F-F: 中堅
+3. C-E-A-E-E-E: 強豪
 
 まずはボールに追いつかないとどうしようもない。
 
