--- a/shared/human/being/well/趣味.md
+++ b/shared/human/being/well/趣味.md
@@ -13,3 +13,5 @@
 
 趣味でも格ゲーとか勝ち負けをやってる人は趣味をビジネスにして優劣がついても気にならない。
 逆に、趣味で優劣がつくのが嫌なら誰にも公開しないとか、親しい人にだけ公開するとか、隠した方がいい。
+
+趣味は「自分のこだわりを自分のためだけに好きなだけ追求できる」というメリットがある。「好きだから好き」でいい。自分のこだわりに理由などない。むしろ理由がなくていいのが趣味だ。
