--- a/shared/politics/violence/暴力.md
+++ b/shared/politics/violence/暴力.md
@@ -31,3 +31,5 @@
 「やっぱりダメか…人から暴力を奪うことはできないよ。ねぇ？兵長。」『進撃の巨人』
 
 声をかけたり見たりすることさえも承認されなければ暴力だ。
+
+暴力を振るう大前提として必要なのは、暴力を振るわれる覚悟を持つこと。殴られても驚かないで即座に殴り返すこと。これができないと手が遅れて弱い。
