--- a/shared/society/品性.md
+++ b/shared/society/品性.md
@@ -1,6 +1,6 @@
 # Elegance
 
-品格、上品さ、優雅さ、気品。
+品格、上品さ、優雅さ、気品、社会秩序。
 
 品格を構成する要素として、知性、礼儀作法、人間性、美意識、芸術性、など。
 
@@ -18,3 +18,5 @@
 品性の基礎は己を律すること。
 
 品性があるとそれだけで一目置かれる。ただ、品性があっても知性がないとすぐ化けの皮が剥がれる。
+
+「ルールを守る、マナーを守る、そんな当たり前のことをするだけだ。自分たちの遊び場を自分たちで荒らして使いづらくするなんて馬鹿みたいじゃないか。」『ふたりソロキャンプ』
