--- a/shared/society/社会.md
+++ b/shared/society/社会.md
@@ -97,3 +97,5 @@ businessやcommunityも社会の一部。
 「どう考えても社会に対して肯定的な人たちじゃない。」『雑用付与術師が自分の最強に気付くまで』
 
 社会というのは常に狂っているもので、いちいち「社会が狂っている」というのはおかしい。万人に合っている社会はない。
+
+法律は最低限のルールなので、暗黙的なマナーの範囲まで守らないと周りに認められない。社会的に認められなければ排除される。特に悪いものは法律によって暴力的に制圧される。
