--- a/shared/war/戦争.md
+++ b/shared/war/戦争.md
@@ -164,3 +164,5 @@ Lose-WinをLose-Loseに持ち込む。
 戦争とゲームの違いは、べつに負けてもいいところ。恐怖を与えられるなら、負けてもいい。毒を持った生き物が食べられることでいずれ警戒して食べられなくなるのと同じ。
 
 戦争はゲームのように優劣を競うものではないが、付随的なゲーム性はある。
+
+戦いが終わったらノーサイド。敵も味方もない。いや、そうならないと戦いが終わったとは言えない、と言うべきか。
