--- a/shared/war/戦闘.md
+++ b/shared/war/戦闘.md
@@ -1,3 +1,12 @@
 動きの起こりを隠すと対応しづらい。「やめてください！」って言いながら頭からゆるいタックルして、体で隠した脚で金的を狙うとか。
 
 戦闘における構えは守りのためのもの。突然の攻めに対応できるように構える。
+
+戦闘の種類:
+
+- 1:1
+- 1:N
+- N:1
+- N:N
+
+一対一で密着の戦闘の一つの目標はマウントポジションを取ること。相手の腹を股で挟んで馬乗りになること。一方的に全力の打撃を打てる。
