--- a/games/Pawapro/2024/栄冠ナインの選手育成.md
+++ b/games/Pawapro/2024/栄冠ナインの選手育成.md
@@ -137,9 +137,10 @@
 
 目標:
 
-1. F-F-F-D-E-E: 盗塁と後逸を最低限防ぐ
-2. C-D-F-D-E-E: 中堅
-3. B-D-E-C-E-E: 強豪
+1. F-F-F-D-E-F: 最低限の盗塁を防ぐ（弱小レベル）
+2. F-F-F-D-E-E: 後逸を減らす
+3. C-D-E-D-E-E: 中堅
+4. B-D-E-C-E-E: 強豪
 
 捕球が高いと後逸しにくい。
 
@@ -170,9 +171,10 @@ DかCくらいで牽制できればまずは十分なので、一旦打撃能力
 
 目標:
 
-1. C-F-F-F-F-E: 最低限エラーを減らしつつ打撃を伸ばす
-2. C-E-C-F-F-E: 中堅
-3. A-D-B-F-E-E: 強豪
+1. F-F-F-F-F-E: 最低限のエラーを防ぐ
+2. C-F-F-F-F-E: 打撃を伸ばす
+3. C-D-E-F-F-E: 中堅
+4. A-D-B-F-E-E: 強豪
 
 ## 二塁手
 
