--- a/shared/love/愛する技術.md
+++ b/shared/love/愛する技術.md
@@ -45,3 +45,5 @@
 愛する技術は、価値があるものとして扱う技術。ケアとかメンテナンスとか。大切にする。
 
 誰かと関係を続けるために重要なのが、愛と情。
+
+お金をかけるのは愛情ではない。投資。愛情を示すなら、自らの手を汚さなければならない。直接的な関与でしか愛情は示せない。
