--- a/shared/success/成功の例.md
+++ b/shared/success/成功の例.md
@@ -1,8 +1,14 @@
-- 最適・効率的 (management)
+- 最適・効率 (management)
 - 実現・達成 (achievement)
-- 発展 (development)
-- 参加・積極的 (engagement)
-- 勝利 (game)
+- 発展・発達 (development)
+- 参加・契約 (engagement)
+- 接待・娯楽 (entertainment)
+- 勝利・優越 (game)
+- 変化・影響 (work)
 
 - 社会的成功: 有名になる、信用される
 - 経済的成功: 資本を多く持つ
+
+## メモ
+
+効率、発達、実績、娯楽、なども成功の一種。特定の成功を目指すための活動。
