--- a/shared/breath/training/tips/呼吸筋を鍛える.md
+++ b/shared/breath/training/tips/呼吸筋を鍛える.md
@@ -1,2 +1,12 @@
+- 腹式呼吸で息を吸って、横隔膜を下げたままキープする
+- 胸式呼吸で息を吐いて、息を止めたまま腹筋を持ち上げてキープする
+- 胸式呼吸で息を吸って、胸郭を広げたままキープする
+- 腹式呼吸で息を吸って、横隔膜を下げたまま腹筋を上げ下げして息を吸ったり吐いたりする
+- 腹式呼吸で息を吸って、横隔膜を下げたまま腹筋をゆっくり上げて細く長く強く息を吐く。
+
 主な呼吸筋としては、肋間筋、横隔膜、腹筋がある。
 そのほか、首や背中の筋肉も動いている。
+
+呼吸に負荷をかける場合、横隔膜を下げる、腹筋を上げる、横隔膜を下げたまま腹筋を上げ下げする、あたりがいい。
+
+呼吸筋はすぐ衰えるので、日頃から作業中なんかにも呼吸の訓練をするのが大事。
