--- a/shared/government/democracy/民主主義.md
+++ b/shared/government/democracy/民主主義.md
@@ -77,3 +77,5 @@
 2025年の参院選は、自公や立民のようにごく少数の偏った意見だけ取り込んだポピュリズムぶった政党が否定されて、真に国民の大多数が望む政党が選ばれた選挙だった。
 
 民主主義国家においては、国民の敵は国民である。政府ではない。そもそも政府に文句を言っても意味がない。あくまでも国家の主権は国民にある。国民に直接文句を言うべき。身の周りの自分のためにならない人をとにかく叩いて矯正する。手は出さないで、口は出す。
+
+民主主義国家において、国民の敵は国民。そういう国民の足を引っ張る国民を殺さないといけない。これは肉体的な話じゃなくて、そういうことが許されないように社会的に殺すということ。
