--- a/games/Pawapro/2024/栄冠ナインの選手育成.md
+++ b/games/Pawapro/2024/栄冠ナインの選手育成.md
@@ -166,15 +166,14 @@ DかCくらいで牽制できればまずは十分なので、一旦打撃能力
 捕手の次にボールに触る選手。捕球は早めにEにしたい。できればCあると強い。
 
 - 打撃優先
-- 捕球の優先度が高い
+- 捕球Eを優先する
 - 走力、肩力、守備力の優先度が低い
 
 目標:
 
 1. F-F-F-F-F-E: 最低限のエラーを防ぐ
-2. C-F-F-F-F-E: 打撃を伸ばす
-3. C-D-E-F-F-E: 中堅
-4. A-D-B-F-E-E: 強豪
+2. C-D-E-F-F-E: 中堅
+3. A-D-B-F-E-E: 強豪
 
 ## 二塁手
 
@@ -192,7 +191,8 @@ DかCくらいで牽制できればまずは十分なので、一旦打撃能力
 
 ## 三塁手
 
-- 守備優先（肩力D）
+- 守備優先
+- 肩力Dを優先する
 - 走力、守備力、捕球の優先度が低い
 - 送球C以上にしたい
 - 送球E以下は避けたい
@@ -216,7 +216,7 @@ DかCくらいで牽制できればまずは十分なので、一旦打撃能力
 目標:
 
 1. F-F-D-E-D-F: 最低限の二遊間
-2. E-F-C-E-C-F: 中堅
+2. C-F-C-F-C-F: 中堅
 3. C-F-A-D-B-F: 強豪
 
 走力よりも守備力を上げたほうが守りは強い。
@@ -227,13 +227,13 @@ DかCくらいで牽制できればまずは十分なので、一旦打撃能力
 
 ## 外野手
 
-- 走力優先（走力C）
+- 走力Cを優先する
 
 目標:
 
 1. F-F-C-F-F-F: 外野フライがだいたい取れる
-2. C-E-C-E-F-F: 中堅
-3. C-E-A-E-E-E: 強豪
+2. C-D-C-F-F-F: 中堅
+3. C-D-A-E-E-E: 強豪
 
 まずはボールに追いつかないとどうしようもない。
 
