--- a/games/Pawapro/2024/栄冠ナインの選手育成.md
+++ b/games/Pawapro/2024/栄冠ナインの選手育成.md
@@ -88,6 +88,21 @@
 - パワーがDになったら弾道を3にすると長打力ボーナスが乗る
 - 守備で走力が必要なら、パワーより走力を優先する
 
+走力を伸ばさない場合:
+
+1. ミートD
+2. 走力E
+3. ミートC
+4. パワーD
+5. 弾道3
+
+走力を伸ばす場合:
+
+1. 走力C
+2. ミートC
+
+守備のために走力を上げるポジションの場合、ミートと走力が手順前後して、パワーは余裕がなければ上げなくてもいい。
+
 パワーを上げるのはミートがCになってからでいい。
 ただ、弾道3以上なら早めにEやDにすると長打力ボーナスが乗る。それでもまずミートDまでは上げたい。
 
@@ -120,6 +135,8 @@
 捕手でもCあれば十分。二三遊外あたりならEでも十分戦える。
 
 守備力が影響するのは、捕球から送球までの早さと動き出しの早さ。
+
+打撃と違って、ポジションによって細かい違いがある。
 
 ## 補欠
 
