--- a/games/Pawapro/2024/パワプロの選手育成.md
+++ b/games/Pawapro/2024/パワプロの選手育成.md
@@ -1,3 +1,28 @@
+## 投手
+
+## 投手の優秀な特殊能力
+
+S:
+
+- 奪三振
+- 対ピンチ
+- 対強打者
+- 勝ち運
+- 尻上がり（先発投手のみ）
+- 威圧感（リリーフ投手のみ）
+
+A:
+
+- 対左打者
+- ノビ
+- 打球反応
+
+B:
+
+- ジャイロボール
+- クイック
+- 闘志
+
 ## 野手
 
 ### 弾道
