--- a/games/Pawapro/2024/栄冠ナインの選手育成.md
+++ b/games/Pawapro/2024/栄冠ナインの選手育成.md
@@ -15,14 +15,15 @@
 
 中間目標:
 
-1. 制球E
-2. スタミナD or C（チーム次第）
-3. 総変化量7
-4. 制球D
-5. 総変化量10
-6. 制球A
-7. 球速145km/h
-8. 総変化量12
+1. スタミナE
+2. 制球E
+3. スタミナD or C（チーム次第）
+4. 総変化量7、2球種
+5. 制球D
+6. 総変化量10、3球種
+7. 球速141km/h
+8. 制球A
+9. 総変化量12
 
 緩い変化球か落ちる変化球があるなら、球速特化が強い。
 
@@ -33,19 +34,24 @@
 148km/h、総変化量9でだいたいCくらい。
 161km/h、総変化量16でだいたいSくらい。
 
-優先度の高い特殊能力:
+カードが強化される特殊能力:
 
-1. 奪三振、対強打者、対ピンチ
-2. キレ、ノビ、低め、重い球、打球反応
-3. 威圧感、対左打者、勝ち運
+- 内角攻め: 内角中心
+- キレ: うたとれ
+- 緩急: 緩急重視
+- リリース: 緩急重視
+- 低め: 低め中心
 
 速球投手はストとれの失投が怖いので、制球も上げたい。
 
 栄冠ナインでは強いカードの数字が上がる、キレ、低めも強い。
 
-対エースを回避するためにあえて球速を144キロ以下に抑える手もあるけど、栄冠だと世界大会で勝手に上がってしまうので調整が難しい。
+対エースを回避するためにあえて球速を144キロ以下に抑える手もある。
+栄冠だと世界大会で勝手に上がってしまうので調整が難しい。
 
-## 野手共通
+コントロールAになると外角攻めの7が出るので強いけど、かなり時間がかかる。
+
+## 野手
 
 - 打撃能力はまずDFCかDDEを目指す
 - Gはすぐ消せるので、Fまでは上げたほうがいい
@@ -82,11 +88,22 @@
 基本的にはまず最低限の打撃能力が必要だけど、名門として安定させるなら守備能力も伸ばしたい。まぁ、最低ラインを越えたらあとは好み。
 セカンドとショートは最低限の打撃より守備優先でもいい。とはいえ、EEくらいは欲しい。
 
+## 野手の特殊能力
+
+- S:
+  - キャッチャー
+  - 威圧感
+  - ムード
+- A:
+  - アベレージヒッター
+
 ## 打撃力
 
-- ミートがDかCになってからパワーや走力を上げる
-- パワーがDになったら弾道を3にすると長打力ボーナスが乗る
 - 守備で走力が必要なら、パワーより走力を優先する
+- パワーや走力を上げるのは、ミートがCになってからでいい
+- 初めから弾道3以上ある選手はミートDになったらパワーを優先してもいい
+- パワーEで弾道4、パワーDで弾道3、パワーCで弾道2になると長打力ボーナス小が乗る
+- パワーAで弾道4、パワーSで弾道3になると長打力ボーナス大が乗る
 
 走力を伸ばさない場合:
 
@@ -95,6 +112,8 @@
 3. ミートC
 4. パワーD
 5. 弾道3
+6. パワーA
+7. 弾道4
 
 走力を伸ばす場合:
 
