--- a/shared/communication/media/language/枕詞.md
+++ b/shared/communication/media/language/枕詞.md
@@ -1,3 +1,7 @@
+# 枕詞
+
+ある特定の言葉を導くために添えられる決まった言葉。
+
 枕詞の種類:
 
 - きっかけを作る
@@ -14,3 +18,8 @@
 「XXXの話に戻るんだけど」
 
 「これ言っていいかわからないんだけど」
+
+和歌などの修辞技法では通常5音節。「ひさかたの（光）」や「ちはやふる（神）」などがある。
+
+「ぬばたまの」は美しく黒いものにかかる枕詞。
+「ぬばたまの黒髪山に〜」と言ったとき、「黒髪山」自体は固有名詞だけど、「ぬばたまの」が「黒髪」にかかることで「黒髪」を強調する。景色としての「黒髪山」と人の特徴としての「黒髪」を同時に語る。
