--- a/shared/government/democracy/民主主義.md
+++ b/shared/government/democracy/民主主義.md
@@ -79,3 +79,5 @@
 民主主義国家においては、国民の敵は国民である。政府ではない。そもそも政府に文句を言っても意味がない。あくまでも国家の主権は国民にある。国民に直接文句を言うべき。身の周りの自分のためにならない人をとにかく叩いて矯正する。手は出さないで、口は出す。
 
 民主主義国家において、国民の敵は国民。そういう国民の足を引っ張る国民を殺さないといけない。これは肉体的な話じゃなくて、そういうことが許されないように社会的に殺すということ。
+
+民主主義が広まったのは、人権とかではなく、単に民衆、数の力こそが最強だったからだ。民衆は常に支配者よりも多い。
