--- a/games/Pawapro/2024/栄冠ナイン/栄冠ナインの選手育成.md
+++ b/games/Pawapro/2024/栄冠ナイン/栄冠ナインの選手育成.md
@@ -88,6 +88,75 @@
 基本的にはまず最低限の打撃能力が必要だけど、名門として安定させるなら守備能力も伸ばしたい。まぁ、最低ラインを越えたらあとは好み。
 セカンドとショートは最低限の打撃より守備優先でもいい。とはいえ、EEくらいは欲しい。
 
+まずはどの選手も打撃能力EFDと必要な守備能力のG消しが先決。
+
+栄冠ナインなら打撃能力はBCBあれば十分。走力Sあれば盗塁もできてなお良い。
+それ以上は守備に必要なら走力をSにして、守備能力も上げたほうがチームとしては強い。打線は繋がって、点も取られにくい。
+
+ミートとパワーは伝令で上がる。走力の優先度が高い。
+
+まずは打撃能力も守備能力も最低限確保して、スタメンで出せるようにする。
+多少劣っていても最低限の能力があれば、代打の後の交代要員としても使える。
+
+打撃能力を上げるばかりではなく、守備要員を用意しておくと代打を出しやすい。
+
+1年生の中で、二塁手と遊撃手になる選手だけは守備重視で育てないといけない。とはいえ、どっちみち走らせることにはなる。
+それ以外に余裕があれば、もう一人守備特化で育ててサブポジをたくさんつけておくと便利。
+
+意外性は条件付きでパワーAになるので、早めに付けておく。
+意外性持ちはパワーがなくてもいいので、ミートを上げておけば1年から勝ち越しチャンスの代打に使えるかも。
+
+打撃能力はまずBCFかCDBを目指す。
+
+1年生の野手は走力アップが基本。
+
+野手もパリコレするだけでなく打たせた方が育成になる。
+
+盗塁が高いなら代走に出す手もある。打撃もできるなら代打にも出せる。とにかく試合に出る機会を増やす。
+欠点をなくすのは2年生からでいい。
+
+1年生からレギュラーを目指すならファーストが一番簡単。
+次にサードかキャッチャーで、外野手も比較的入りやすい。
+
+弾道が高い選手はパワーを優先して上げる。
+
+栄冠ナインはパワーを上げるのがあまり強くない。Dあればあとはミートと走力。
+
+熱血漢はパワーを補えるので、ミートだけ上げておけば代打に出しやすい。
+
+弾道1から2は10日くらいで上がる。
+ただ、疲労によってはズレるので、練習指示カードを抱えて月初に指示するのがいいかも。
+
+サブポジはできれば2年の秋までつけたくないけど、あまり遅いと秋大会に間に合わない。
+
+2年生からサブポジをたくさん増やすのはやりすぎ。
+3年の余った選手でいい。
+
+弾道が高いとパワーDでホームランすることもある。
+元からパワーが高かったら弾道を上げるのもありかも。
+
+栄冠ナインの打撃はミートと走力が最優先で、とにかく魔物中に転がせの数値を上げないといけない。
+
+まずはパワーを後回しでいいかも。
+序盤はEFE, EFD, EFC経由でDFCあたりを目指す。
+
+栄冠ナインの序盤は捕球を上げる余裕がない。
+ただ、キャッチャーだけはD欲しい。数値的に厳しくてもEにはする。ファーストもEは欲しい。
+
+まず全ての野手はDFDを目指したい。そこまで来てから守備重視のポジションは守備を上げる。
+ただ、控えが十分にいるなら守備要員がいてもいい。強豪や名門になってから。
+
+パワーが低いなら転がせが抜けにくい。
+
+盗塁E以下だと走力Bで十分なので、そこまで来たら走力よりもパワーに振る。
+ただ、守備に走力が必要なポジションは走力を伸ばさないといけないので噛み合いが悪い。
+
+栄冠ナインは転がせが強いので、内野安打の青特が強い。あとそこからの盗塁とバント。
+あとは全体バフのムード、投手のスタミナを削る威圧感、単純にヒットになりやすくなるアベヒ、流し打ち、打球速度が上がる広角打法、単純なバフのチャンス、対エース、窮地、粘り打ち、など。
+
+肩力や捕球はまずボールに追いつけないと意味がない。走力や守備が優先。
+捕手、ファースト、サードはあまり動かないので走力や守備がなくてもいい。
+
 ## 野手の特殊能力
 
 - S:
@@ -408,3 +477,77 @@ Eは最低限で、Fはかなり悪い。ただ、できれば使うステータ
 パワーBあったら弾道2にはしたい。
 
 かく乱は走者の威圧感で、守備力も下がる。走者として出ないと発動しないので威圧感よりも機会は少ない。
+
+## 性格の違い
+
+性格ランキング:
+
+1. 天才肌: かなり成長しやすい、伝令「助言」が優秀、キャプテン時に好イベントがある
+2. 内気: 戦術「魔物」が壊れている、攻撃・守備伝令「励ます」が優秀、変化球が伸びやすい
+3. したたか: 戦術「ゆさぶる」が全体デバフで強力、「くせ者」も魔物との相性がいい、変化球や走力が伸びやすい
+4. お調子者: 野手の戦術がどちらも全体バフで強力、キャプテン時に好イベントがある、走力が伸びやすい
+5. ごくふつう: 満遍なく成長する、戦術「ファイト」で調子が安定するので代打や中継ぎ向き
+6. 熱血漢: 守備伝令「盛り上げる」が優秀
+7. やんちゃ: 守備伝令「盛り上げる」が優秀、戦術が弱い
+8. クール: 伝令「助言」が攻守ともに優秀、戦術が弱い、制球やミートが伸びやすい
+
+占い師は天才肌と内気以外変えて、内気を狙う。
+ただ、内気の枚数が多かったらしたたかやお調子者は残してもいい。
+
+性格によって上がりやすいステータスがある。
+投手は変化球が上がりやすい内気かしたたか、野手は走力が上がりやすいお調子者かしたたかが使いやすい。
+
+守備伝令はやんちゃと熱血漢の「盛り上げる」が強い。
+ごくふつうと内気の「励ます」も便利。
+
+お調子者とやんちゃの攻撃伝令「盛り上げる」はチャンスとチャンスメーカーが乗るので、2塁以上か走者なしの場面で切りたい。基礎能力の向上は大したことない。
+
+クールと天才肌の攻撃伝令「助言」は3年になるとアベヒがつく。
+
+お調子者としたたかは走力が伸びやすいのも優秀。
+
+## 投手に向いた性格
+
+制球と変化球が強いので、天才以外では、内気、したたか、クールが強い。ごくふつうでもいい。
+
+天才、クール、ごくふつう以外は制球をSにするのが難しい。
+外角中心が6になるAを目指すか、CかBで妥協して得意な部分を伸ばす。
+
+## 性格を変える
+
+性格を変える時、天才肌と内気は変えない。
+したたかは何人もいるとゆさぶるが強いので変えないのも手。基本変えなくていい。
+やんちゃと熱血漢はチーム次第。ベンチに二人は欲しい。できれば2、3年。足りていれば変えていい。
+ごくふつうとクールとお調子者は基本的に変えてもいい。ただ、キャプテンのお調子者は変えない。
+
+## 打撃能力
+
+ミートFでも走力Dまでは走力ぶっぱでいい。バットに当てて凡退になるより、たまたまバットに当たって内野安打になるほうがいい。
+ただ、パワーDあるなら弾道2にしてからミートDを優先するのもありかも。
+
+パワーDになったら弾道2にしていい。
+ただ、数値に余裕がなかったら後回しでいい。
+
+パワーを上げるならDまで上げる。
+Dあると弾道が1や2でもホームランや長打になる可能性がある。
+
+アベヒかパワヒでないならパワーB、弾道3にする必要はない。外野の頭を越えるほどではない。伸ばすならパワーSまで伸ばさないと無理かも。
+
+## 守備能力
+
+二塁手、遊撃手、外野手は走力を上げるのが攻撃にも守備にも繋がる。とにかく走力を上げる。
+
+## 走塁能力
+
+走力が役に立つ場面:
+
+- 内野安打
+- 盗塁
+- 走塁（特に、犠打による進塁）
+- 広範囲の守備（二塁手、遊撃手、外野手）
+
+盗塁Eは走力Sまで上げても盗塁できるか怪しいので、守備能力として必要ないならBで十分。
+
+盗塁Cは走力Aでだいたい盗塁できるので、それ以上は守備で使わないならなくてもいい。
+
+捕球Cあると一塁、三塁線がかなり抜かれにくくなる。
