--- a/games/Pawapro/2024/栄冠ナイン/栄冠ナインの基本.md
+++ b/games/Pawapro/2024/栄冠ナイン/栄冠ナインの基本.md
@@ -1,6 +1,11 @@
-# 栄冠ナインの設定
+## 注意点
 
-## 自動交代をOFFにする
+- 重要イベントの表はすぐ見れるように開いておく
+  - https://game8.jp/eikan-nine/554848
+
+## 設定
+
+### 自動交代をOFFにする
 
 「試合中の選手自動交代」はOFFにする。
 ONになっていると勝手に弱い選手と交代されて予想外の失点があったりする。
