--- a/shared/collaboration/organization/属人性.md
+++ b/shared/collaboration/organization/属人性.md
@@ -9,3 +9,5 @@
 ただ、忙しくなるとそういう仕事は差し戻すなり他の人に流すなりしないといけない。
 
 属人化の解消はマネージャー側の都合なので、プレイヤーに協力してもらおうとしてもうまくいかない。専用の部署を作って置き換えを仕事にするか、自分でやるしかない。
+
+高級取り一人でできる仕事がもし複数人で分担すればできるなら、多少コストがかかっても複数人を雇ったほうが持続しやすい。
