--- a/shared/cooking/tips/肉を柔らかくする.md
+++ b/shared/cooking/tips/肉を柔らかくする.md
@@ -1,3 +1,11 @@
+## 加熱しすぎない
+
+加熱しすぎるとタンパク質は固くなる。単純に水分が抜けても固くなる。肉も卵も。
+
+肉を柔らかくするなら、煮るより蒸したほうがいい。熱が入りすぎないし、水分も抜けにくい。量を作るのは難しいけど、家なら大丈夫。
+
+## ブライン液に漬ける
+
 ブライン液に漬けることで保水性を高めて肉を柔らかくする。
 
 - 水 .. 100g
@@ -7,3 +15,13 @@
 塩分濃度が濃すぎると逆に水を押し出してしまうのでちょっと少なめに混ぜるくらいでもいい。
 
 https://oceans-nadia.com/user/236306/recipe/382329
+
+## 繊維をほぐす
+
+繊維をほぐす酵素を含む食材と一緒に漬け込むと柔らかくなる。
+舞茸や生姜は肉を柔らかくしたいとき一緒に漬け込むのに使われる。
+
+フォークで刺したり包丁やハンマーで叩いたりして繊維をほぐすと柔らかくなりやすい。
+ただ、水分が抜けやすくなるので煮込みには向かない。
+
+脂身は水分が抜けやすくなってもいいので、穴を空けて柔らかくするといい。
