--- a/games/Pawapro/2024/栄冠ナイン/栄冠ナインの序盤.md
+++ b/games/Pawapro/2024/栄冠ナイン/栄冠ナインの序盤.md
@@ -113,6 +113,14 @@
 
 ## 3年縛り
 
+- 初年度のリセマラは強い投手と内気を狙う
+- 3年目夏にピークを持ってくる
+  - 3年目に卒業してない選手を優先して育成する
+  - 2年目は夏より秋と春が重要
+  - 2年目のスカウトはとにかく転生狙い
+
+3年縛りは、評判を上げつつ、3年目夏にピークを持ってこないといけない。下級生ばかり育ててもいけないし、上級生ばかり育ててもいけない。
+
 3年縛りは終わった後に誰かと対戦させた方が楽しいかも。
 
 3年縛りは1年目が厳しい。リセマラ必須。
@@ -148,3 +156,5 @@
 甲子園優勝するまでは強豪と名門を行ったり来たりする。まずは強豪を維持するのが2年目以降の目標。
 
 完全にリセットした場合、1, 2年目でプロ入りするOBがいてようやく赤特を消せる。
+
+序盤のチーム方針は器材で決める。最初は機動力重視で早めにストップウォッチを買って、それ以降は打撃力と守備力の機材が揃っているほう。
