--- a/games/Pawapro/2024/栄冠ナイン/栄冠ナインの選手獲得.md
+++ b/games/Pawapro/2024/栄冠ナイン/栄冠ナインの選手獲得.md
@@ -1,5 +1,16 @@
 ## スカウトの方針
 
+探索の優先度:
+
+1. 投手重視で、投手が多い都道府県
+2. できれば守備重視で、捕手が多い都道府県
+3. 守備重視の地域、または転生選手が強い地域
+
+天才や転生は運だけど、場所によって転生選手が違う。
+
+スカウトはまず強い投手を探すのが第一で、常に一人は強い投手がいてほしい。次に好リードの捕手。投手と捕手が多いところでスカウトするのが基本。
+あとは転生が強い岩手、大阪、兵庫、京都、愛知、東京、など。3年が抜けるポジション。名門になるとそのポジションに全く選手がいないってことはあまりないし、サブポジでもいい。
+
 スカウトは名門から強豪になると遠くの地区を調べられなくなるので、名門から落ちる可能性があるなら、遠くの選手から優先してスカウトする。
 
 投手は才能。最優先。
