--- a/games/Pawapro/2024/栄冠ナイン/栄冠ナインの選手育成.md
+++ b/games/Pawapro/2024/栄冠ナイン/栄冠ナインの選手育成.md
@@ -209,6 +209,8 @@
 打撃能力はBCBやBDAを目指すか、DAFを目指すか。
 守備に走力が必要ないならパワーだけ上げるほうが早いけど、アベレージが高くても3割くらいになる。
 
+栄冠はパワーより走力。転がせが強い。ただ、パワーがあると内野の頭を越えるので、相手の守備が良くても安定しやすい。
+
 ## 守備力
 
 - 打球に追いつけるようになるまで捕球はFでいい
