--- a/shared/technique/技術.md
+++ b/shared/technique/技術.md
@@ -153,3 +153,5 @@ engineeringは理論的。
 技術はシンプルでいい。まずは身体の鍛錬から。特に思った通りに体を動かせるようにする。頭と体を一致させる。身体が変われば技術もまた変わる。身体ができてから技術を極めるのが効率的だ。
 
 技術を身につけることについてはartの下より独立したほうがいいかも。
+
+「形を変えて使えるなら、技の原理や理屈を理解しているということ。」『凶乱令嬢ニア・リストン』
