--- a/shared/development/卓越性.md
+++ b/shared/development/卓越性.md
@@ -34,3 +34,7 @@
 他人の評価は「うまい」と言われることよりも「すごい」と言われることを目指す。
 
 一流は「圧倒的」であるべし。勝率6割くらいの「良い」選手では足りない。同じクラスの中でも8割、なんなら9割勝つ。
+
+プロはまず基礎ができている上に、人間離れした武器を一つは持っている。歌手なら音楽的なリズムやメロディの完成度に加えて、声質、声色、声量、音域、など。
+
+基礎になる技術は後からついてくるけど、人間離れした武器になりうるものはそれよりも前から片鱗が見える。
