--- a/shared/voice/良い声は良い息から.md
+++ b/shared/voice/良い声は良い息から.md
@@ -3,3 +3,6 @@
 声や歌はとりあえず息から。息が足りないと声も出ない。息があれば多少技術が足りなくてもなんとかなる。
 
 良い息のためには横隔膜や内側の腹筋、背筋などを鍛えないといけない。
+
+良い声を出すには、まず肺活量が何よりも基礎になる。
+肺活量は体の大きさを連想させる。
