--- a/shared/development/開発.md
+++ b/shared/development/開発.md
@@ -174,3 +174,5 @@ discovery, 発見・探索も関連する。
 
 母数が多いのは正義。
 格ゲーなんかもスト６で女性プレイヤーが増えてから大会の上位にも女性プレイヤーが入ってきてる。
+
+開発の目標は発達であり、もっというと卓越。周りに埋もれてしまってはいけない。まぁ、最低限周りに追いつくところから始まるのもまた事実。
