--- a/shared/technique/技術の巧拙.md
+++ b/shared/technique/技術の巧拙.md
@@ -26,3 +26,5 @@ https://qiita.com/prum_azuma/items/5866c667155c146d1574
 巧拙の基準の一つとして再現性がある。
 歌だったら何度歌っても同じ曲を同じように歌えること。音程やリズム、声質、など。その上で狙ったところだけ変えられるコントロールの精度が高いとなお良い。
 野球だったら、素振りだと同じスイングなら同じ速度で同じ軌道で振れることだったり、ピッチングで同じ場所に同じ速度で投げられるとか。
+
+技術的に優れているというのは、開発で先をいっているという部分もある。
