--- a/shared/music/vocal/歌手.md
+++ b/shared/music/vocal/歌手.md
@@ -17,3 +17,6 @@ https://www.youtube.com/watch?v=KCqSzqBT0ik
 例えば、Mrs. GREEN APPLEだったらやはり強い高音が特徴。何らかの人間離れした特徴を持っている。
 
 喉声の歌手は30-40代で喉ボロボロになって消えるだろうから儚い。
+
+リズムやメロディなどの技術的な基礎はできていて当然。上手くて当然。
+歌手になるであれば、その上でまず声が良くないといけない。技術よりもまず良い声を目指す。
