--- a/shared/singing/tips/歌詞カードを作る.md
+++ b/shared/singing/tips/歌詞カードを作る.md
@@ -28,6 +28,18 @@
 - 〜: ロングトーン
 - 太字: アクセント
 
+## よく使う表現
+
+- 強く
+- 徐々に強く（クレッシェンド）
+- 徐々に弱く（デクレッシェンド）
+- 細く
+- 明るく
+- 暗く
+- 軽く
+- 重く
+- おどろおどろしく
+
 ## その他
 
 歌詞カードを作っても、カラオケでは歌詞を完全に覚えるか、画面に出る歌詞から歌詞カードの情報を思い出せるようにした方が便利。いちいち歌詞カードを取り出すのはめんどい。
