--- a/shared/singing/歌の表現.md
+++ b/shared/singing/歌の表現.md
@@ -9,3 +9,5 @@
 - 息が漏れた細い高音
 
 ピッチが変わるのは基本的に息が強くなるか、声帯が伸びるか、声帯が硬い時。感情と対応している。
+
+玉置浩二の『メロディー』やUruの『ファーストラヴ』みたいに気持ちを入れて歌う場合は細い地声にしたいけど、『春泥棒』みたいに爽やかに歌う場合は太い裏声というか囁き声でもいい。
