--- a/shared/technique/技術の巧拙.md
+++ b/shared/technique/技術の巧拙.md
@@ -28,3 +28,6 @@ https://qiita.com/prum_azuma/items/5866c667155c146d1574
 野球だったら、素振りだと同じスイングなら同じ速度で同じ軌道で振れることだったり、ピッチングで同じ場所に同じ速度で投げられるとか。
 
 技術的に優れているというのは、開発で先をいっているという部分もある。
+
+技術を真に使うためには、失敗する恐怖から解放されなければならない。ひたすら基礎を固めて、基礎を意識しなくてもいいようにする。サッカーならボールコントロールだし、プログラミングならコーティングだ。それでようやく真に考えるべきことに頭を回せる。
+考えたことに対して、体が勝手に動くようにする。
