--- a/shared/war/戦争.md
+++ b/shared/war/戦争.md
@@ -166,3 +166,5 @@ Lose-WinをLose-Loseに持ち込む。
 戦争はゲームのように優劣を競うものではないが、付随的なゲーム性はある。
 
 戦いが終わったらノーサイド。敵も味方もない。いや、そうならないと戦いが終わったとは言えない、と言うべきか。
+
+敵が多い世界で育った人は戦いを覚える。敵に恐怖を与えること、舐められないこと、を覚える。
