--- a/shared/singing/tips/キーを変えて歌う.md
+++ b/shared/singing/tips/キーを変えて歌う.md
@@ -1,5 +1,7 @@
 ## 基本
 
+歌ってみてキーを調整する場合、まず+6から始めて、高かったら+3に、低かったら-3にする。二分探索する。
+
 キーを変える時は区切りの音を合わせるのが大事。
 フレーズの最初とか、特徴的な音をまずは合わせる。
 あとはその音を基準に相対的に音を合わせて歌う。
