--- a/shared/love/tips/愛を示す.md
+++ b/shared/love/tips/愛を示す.md
@@ -1,1 +1,7 @@
+愛を示す、好意を示す。
+
 愛を示すのは難しい。愛はそもそも受動的なものなので、能動的に何かしたから愛があるというわけではない。それでいて普段の態度に出るものでもある。もし意識的に愛を示そうとしているとずっと気を張っていないといけない。
+
+相手の話し方を真似していじるのも好意を伝えている。ただ、やりすぎると馬鹿にしてるみたいになるので気をつけないといけない。
+
+特徴的な話し方の人は真似しやすい。
