--- a/shared/love/tips/愛を示す.md
+++ b/shared/love/tips/愛を示す.md
@@ -5,3 +5,6 @@
 相手の話し方を真似していじるのも好意を伝えている。ただ、やりすぎると馬鹿にしてるみたいになるので気をつけないといけない。
 
 特徴的な話し方の人は真似しやすい。
+
+いきなり告白するのは重い。
+いきなり告白するんじゃなくて、ほんの少しの好意を示すところから始める。話しかけたり、名前を呼んだり、会いに行ったり、何かを贈ったりする。
