--- a/shared/achievement/project/tips/プロジェクトの計画を記録する.md
+++ b/shared/achievement/project/tips/プロジェクトの計画を記録する.md
@@ -1,1 +1,12 @@
-#
+# プロジェクトの計画を記録する
+
+ツールに欲しい機能:
+
+- プロジェクトごとにタスクを分類できる
+
+簡単なところでは、Google KeepやNotionのチェックリスト機能で管理するだけでもいい。
+単にTodoアプリを使ってもいいけど、プロジェクトを分けられない場合がある。
+
+TrelloやGithub Projectのようなカンバンツールを使う手もある。
+
+BacklogやRedmineのようなバグトラッキングツールはちょっと見づらい。
