--- a/shared/achievement/project/プロジェクト.md
+++ b/shared/achievement/project/プロジェクト.md
@@ -96,3 +96,7 @@
 明確な終わりというよりは、初めから終わりを前提としているかどうかといったほうがいいかも。
 
 プロジェクトをバラして、プロジェクトじゃなくなるならそれが一番いい。
+
+大きな作業をきちんと終えるためにはプロジェクトを管理しないといけない。
+
+作業自体はachievementやexecutionの考え方。
