--- a/shared/communication/channels/talk/話.md
+++ b/shared/communication/channels/talk/話.md
@@ -50,3 +50,6 @@ conversation になっていく。まず talk が成立してから、conversati
 印象や感想は、事象をまとめてしまっているので、話を広げるならまとめる前の生の状態の方が広げやすい。
 
 相手に合わせるばかりではつまらない。まずテンポを合わせて、慣らしてからゆっくりと自分のテンポに持ち込む。
+
+積極的に話ができなくても会話はできる。
+少なくとも聞かれたことに答えられればいい。話題が途切れないようにする。
