--- a/games/Pawapro/2024/パワプロの選手育成.md
+++ b/games/Pawapro/2024/パワプロの選手育成.md
@@ -30,3 +30,12 @@ B:
 弾道が高いとパワーがそれなりでも長打力ボーナスで飛距離が伸びる。弾道4でパワーE以上、弾道3でパワーD以上、のように弾道が高いほど低いパワーからボーナスが乗る。
 素直にパワーを上げるより、弾道3にする方が早い。パワーDになったらそれ以上伸ばす前に弾道を伸ばそう。
 逆に弾道が初めから3以上ある選手はパワーを伸ばす価値が高い。
+
+### 走力
+
+走力Cあれば緩い外野フライはほとんど取れる。
+
+鋭い外野フライは走力より守備力だけど、優先度は低い。
+
+盗塁D以下なら走力Bあれば十分。代わりにミートを伸ばしたい。
+ただし、外野は長く走るのでどっちみちA以上まで伸ばすといい。
