--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
@@ -522,6 +522,10 @@ DIがギリギリ届かない。
 
 弱/中ネクサス-ノヴァは繋がらないけど、無敵技以外で割り込めないし、ガードさせて+2の投げ間合いだし、インパクトは返せる。
 
+弱/中ネクサスはマイト以外に勝てる4F技の最速暴れとマイトに勝てる立ちガードの二択が基本。ただ、グリードに対してはしゃがみから強攻撃の方がリターンは大きいし、ノヴァも中攻撃で割り込んだほうがリターンは大きい。あとこの二択は強ネクサスなら成立しないので、強弱を見極めないといけない。
+
+弱/中ネクサスはガードされて-5だけど、無敵のない確反はマイトで潰せる。
+
 ## 弱/中ネクサス(h): 2
 
 投げ間合い。
