--- a/shared/decision/判断を早くする.md
+++ b/shared/decision/判断を早くする.md
@@ -30,3 +30,5 @@
 ただ、指標だけを見てはいけない。指標はあくまでも特徴的な一部分でしかない。最終選考は直感なども込みで考える。
 
 基準を設定することで迷いが消える。
+
+信頼性の低い意見しか集められなかった場合、判断材料としてはいまいち。あくまで参考程度にするか、大量に集めていいところを取る。
