--- a/games/Pawapro/2024/栄冠ナイン/栄冠ナインの序盤.md
+++ b/games/Pawapro/2024/栄冠ナイン/栄冠ナインの序盤.md
@@ -71,6 +71,10 @@
 
 やっぱ栄冠ナインの序盤は野手だけ強くても試合に勝てなくて育てきれない。特に天才は特殊能力も少ないから本も溜め込んでおきたいし。
 
+## スカウト
+
+序盤は人数が少ないので、スカウトでも投手よりもまず弱いポジションを補強する。
+
 ## 評判を上げる
 
 秋大会の終わりから春大会までは白マスを積極的に踏むと練習試合を拾えることがあるので、序盤に練習試合で評判狙いするならできるだけ踏む。ただ、確率は高くない。
