--- a/games/Street-Fighter/Six/system/対戦方式.md
+++ b/games/Street-Fighter/Six/system/対戦方式.md
@@ -46,6 +46,8 @@ https://www.redbull.com/jp-ja/street-fighter-6-ranked-system
 
 ゲームが長く続くほど、強い人が増えてランクは落ちやすくなる。
 
+1500MRを維持できないと真にマスターになったとは言えない。
+
 ## カジュアルマッチ
 
 カジュアルマッチはあくまでも手慣らしの場なので、1先でいい。
