--- a/shared/information/情報.md
+++ b/shared/information/情報.md
@@ -187,3 +187,5 @@ https://share.google/qJIl8gO83xEZQZjbk
 それを得てリスクが下がらないなら、情報ではなく嘘と呼ぶ。
 
 情報を簡単に得られるのに全部得る前に考え始める人はあんまり仕事できなそう。ゲーム実況とか見てると話を全部聞く前に考察を始める人がたまにいる。
+
+情報は判断や行動の基礎の文脈。リスクと関連が深い。
