--- a/shared/war/友.md
+++ b/shared/war/友.md
@@ -1,8 +1,13 @@
 友は許す。
 失敗しても善意であるなら、自分のためになる。
 
+戦わない人。
+敵でない人。
+
 敵は殺す。
 
 客はもてなす。
 
 餌は育てる。
+
+友人として信頼しているからといって、専門分野でもない助言を受け入れるべきではない。医療、政治、恋愛、など。
