--- a/shared/communication/channels/sex/恋.md
+++ b/shared/communication/channels/sex/恋.md
@@ -1,8 +1,22 @@
 # 恋
 
+## 恋は戦争
+
+恋は戦争。
+競争に勝たないと手に入らない。
+
+## 恋は性欲
+
 恋は下心。
 
-恋はセックスの過程。
+恋愛というのは性交に至る過程であって、愛情ではない。ただ、愛情を用いることは多い。
+
+恋愛をもっと性欲としてしっかり考えるべき。
+なんか綺麗なものとして扱うのは間違い。
+
+## その他
+
+恋、恋愛。
 
 恋愛的には相手を他の誰よりも優先するほうが優しくするより大事かも。
 
