--- a/shared/cooking/tips/肉を柔らかくする.md
+++ b/shared/cooking/tips/肉を柔らかくする.md
@@ -25,3 +25,5 @@ https://oceans-nadia.com/user/236306/recipe/382329
 ただ、水分が抜けやすくなるので煮込みには向かない。
 
 脂身は水分が抜けやすくなってもいいので、穴を空けて柔らかくするといい。
+
+肉は筋が残っていると縮んで固くなってしまうので、フォークで適当に穴を開けたり、包丁で筋を切ったりすると縮まらない。
