--- a/shared/cooking/加熱.md
+++ b/shared/cooking/加熱.md
@@ -42,6 +42,8 @@
 
 茹でこぼすというのは煮立たせてだばぁさせるっていうよりも、よく茹でてから茹で汁を捨てる。
 
+煮込めば煮込むほど繊維は崩れる。肉も野菜も同じ。ただ、セルロースの細胞壁を持つ野菜と違って、肉は水分が抜けやすいし、タンパク質は高温で固くなる。肉を柔らかくするなら、繊維を崩すのとタンパク質が固くなるのとでバランスを取らないといけない。牛すじや角煮なんかは繊維を崩すことで柔らかくするタイプ。
+
 ## 揚げる、炒める
 
 油を使って加熱する。150-200度で、早く熱が伝わる。
