--- a/shared/war/敵.md
+++ b/shared/war/敵.md
@@ -45,3 +45,5 @@ Lose-Winの関係をLose-Loseに引きずり込む。
 敵を敬い、恐れよ。
 
 恨みを抱えたまま生きていく必要があるのは、その人を警戒しないといけないから。その人が死んだりして警戒する必要がなくなれば破棄してもいい。
+
+周りを威嚇して怖がらせるような態度をわざと取っている人は、周りを敵だと思っていて、その上でビビっている。ビビってるから威嚇する。
