--- a/shared/game/theory/駆け引き.md
+++ b/shared/game/theory/駆け引き.md
@@ -1,3 +1,5 @@
+駆け引き、読み合い。
+
 相手の出方や状況に応じて、自分に有利になるように事を運ぶこと。
 
 あえて非合理的な行動をとって騙すのも駆け引きだけど、協力ゲームの場合は仲間の邪魔になることがある。
@@ -8,3 +10,7 @@
 情報を隠せるなら隠したほうがいい。
 
 攻めと守りの中でもさらに駆け引きがある。
+
+読み合いは暗黙的な交渉に近い。
+
+人に興味がないと読み合いに弱い。
