--- a/shared/voice/training/ボイストレーニング.md
+++ b/shared/voice/training/ボイストレーニング.md
@@ -80,3 +80,5 @@ A4とかの国際表記で説明してない講師はちょっと怪しい。hiA
 声帯は痛めやすいので、リップロールや無声音を使ったトレーニングや体でリズムをとる、呼吸筋を鍛えるトレーニングを重点的に行なう。
 
 ボイトレではまず声を大きく開ける。本番とは少し違う。
+
+VTuberの姫森ルーナやさくらみこ、P丸様。みたいに声が独特すぎる場合は、オペラ的な「正しい」声の出し方で個性を殺してはいけない。つまり、伝統的な練習方法の一部が適用できないので、独自メニューが必要。歌える曲の幅は狭くなりやすいけど、声に合った曲を選ぶ。
