--- a/shared/production/product/development/企画.md
+++ b/shared/production/product/development/企画.md
@@ -4,3 +4,9 @@
 よりも、
 どこを改善したら、このシステムを使った人の売り上げが伸びると思う？
 どこを改善したら、このシステムを使った人の仕事が減ると思う？
+
+製品の企画とビジネスの企画は分けて考える。
+
+まずビジネスとしての事業やそれを回すための業務があって、それを製品で補助する。
+
+インタビューするなら全部聞く。相手に必要かどうか判断させない。製造視点でこちらが判断する。
