--- a/games/Pawapro/2024/栄冠ナイン/栄冠ナインの選手育成.md
+++ b/games/Pawapro/2024/栄冠ナイン/栄冠ナインの選手育成.md
@@ -486,10 +486,10 @@ Eは最低限で、Fはかなり悪い。ただ、できれば使うステータ
 
 1. 天才肌: かなり成長しやすい、伝令「助言」が優秀、キャプテン時に好イベントがある
 2. 内気: 戦術「魔物」が壊れている、攻撃・守備伝令「励ます」が優秀、変化球が伸びやすい
-3. したたか: 戦術「ゆさぶる」が全体デバフで強力、「くせ者」も魔物との相性がいい、変化球や走力が伸びやすい
+3. 熱血漢: 守備伝令「盛り上げる」が優秀
 4. お調子者: 野手の戦術がどちらも全体バフで強力、キャプテン時に好イベントがある、走力が伸びやすい
-5. ごくふつう: 満遍なく成長する、戦術「ファイト」で調子が安定するので代打や中継ぎ向き
-6. 熱血漢: 守備伝令「盛り上げる」が優秀
+5. したたか: 戦術「ゆさぶる」が全体デバフで強力、「くせ者」も魔物との相性がいい、変化球や走力が伸びやすい
+6. ごくふつう: 満遍なく成長する、戦術「ファイト」で調子が安定するので代打や中継ぎ向き
 7. やんちゃ: 守備伝令「盛り上げる」が優秀、戦術が弱い
 8. クール: 伝令「助言」が攻守ともに優秀、戦術が弱い、制球やミートが伸びやすい
 
@@ -507,6 +507,8 @@ Eは最低限で、Fはかなり悪い。ただ、できれば使うステータ
 クールと天才肌の攻撃伝令「助言」は3年になるとアベヒがつく。
 
 お調子者としたたかは走力が伸びやすいのも優秀。
+
+ごくふつうが熱血漢になるイベントは、ある程度育ったら変えてしまっていい。
 
 ## 投手に向いた性格
 
