--- a/shared/communication/コミュニケーション.md
+++ b/shared/communication/コミュニケーション.md
@@ -271,3 +271,5 @@ engagement とも関係が深い。
 行動が決まっているなら、その元になった目的は2番目に伝える。「こうする、その目的は〜」の順序が聞きやすい。より具体的な結論から伝える。
 
 抽象的な話は後回し。
+
+コミュニケーションにおいて、「何を知るべきか」「何を知らせるべきか」をわかってないとうまくいかない。
