--- a/shared/computer/software/engineering/ソフトウェアエンジニアリング.md
+++ b/shared/computer/software/engineering/ソフトウェアエンジニアリング.md
@@ -4,3 +4,51 @@ https://jp.orientsoftware.com/blog/software-engineering-practices/
 
 ソフトウェア開発に比べるとマネジメント寄りの部分をまとめる。
 完成や品質を扱う分野。製品としてのソフトウェア。
+
+- PM
+  - 折衝
+    - 内部
+      - 上司
+      - メンバー
+    - 外部
+  - 進捗管理
+  - 資源管理
+    - メンバー
+      - 教育
+    - 予算
+  - 企画
+    - 要件定義
+    - プロジェクト計画
+  - ビジネス
+    - ブランディング
+    - マーケティング
+      - ビジネス分析
+    - 運営
+- PMO
+- QA
+- カスタマーサポート
+- エンジニア
+  - 開発
+    - 実装
+      - コーディング
+    - 試験
+      - システムテスト
+      - アプリケーションテスト
+      - バッチテスト
+  - 設計
+    - システム
+      - 運用
+      - 移行
+    - アーキテクチャ
+      - 技術選定
+        - 技術検証
+    - アプリケーション
+    - バッチ
+  - インフラ整備
+    - AP
+    - DB
+    - メールなど
+  - 導入サポート
+- セキュリティ
+  - 認証認可フロー
+  - 脆弱性診断
