--- a/shared/execution/planning/計画づくり.md
+++ b/shared/execution/planning/計画づくり.md
@@ -36,3 +36,6 @@ https://dev.classmethod.jp/articles/load-to-pm-01-gather-all-todos/
 計画を立てるときは終わりから逆算する。
 
 1週間の計画づくりと振り返りでも長期の計画について触れたい。
+
+行動の順序を決める。
+行動を決めるdecisionの派生。
