--- a/shared/trust/信頼.md
+++ b/shared/trust/信頼.md
@@ -483,3 +483,10 @@ https://www.humanvalue.co.jp/keywords/theory-of-success/
   - 何を期待するか
   - 何を期待しないか
 - 何に価値を認めるか
+
+基本的に全てを信頼することはない。
+信頼できることだけを信頼して任せるだけでいい。
+
+- どこまで信頼できるか
+
+信頼性を確かめる。
